--- a/testp1.html
+++ b/testp1.html
@@ -7,25 +7,65 @@
     <title>tp1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="setting--page">
-    <pre>
-        <ruby>漢字<rt>かんじ</rt></ruby>
+<body>
+    <div  class="setting--page">
+    「茨城
+いばらき
+」―イバラギではありません！ 
+2017 年 12 月 04 日
+今年放送された NHK の朝の連続ドラマ「ひよっこ」をご覧になったというかたは、大勢
+おおぜい
+いらっしゃることであろう。かく言う私も毎回欠かさず見ていた。主人公が生まれ育った
+のは茨城県いばらきけん
+奥茨城村という架空の地名ではあるが、私のルーツも茨城県北部なので、（41）
+親近感しんきんかん
+を覚えていたのである。
+このドラマの中で、東京に出てきた主人公の母親が、警察官から「イバラギ」と言われ
+ると、｢イバラギではありません、イバラキです」と言い返す場面があった。
+ルーツは茨城だが千葉県で生まれ育った私（42）、とてもよくわかる台詞であった。
+｢茨城」を「イバラギ」と言う人は、私の周りでもけっこう多いのである。ほんとうはこ
+の母親の言う通り「イバラキ」なのに。そして茨城県市出身者が「イバラギではありませ
+ん、イバラキです」と言っているのも、幾度となく耳にしている。
+なぜ「イバラキ」ではなく「イバラギ」と言ってしまうのだろうか。ひとつには「イバ
+ラギ」と、末尾まつびを濁音だくおんにした方が発音しやすいということがあるのかもしれない。
+だがもうひとつ、茨城弁いばらきべんの特質も関係しているような気がする。と言うのも、茨城弁で
+は、力行は濁音になりやすいという性質をもっているからである。（43）、カギ（柿）、
+ハグ（掃く）などのように。従って、茨城出身者が「イバラキ」と（44）、県外の人間に
+は「イバラギ」と聞こえることがあるのかもしれない。そのため茨城県人だって「イバラ
+ギ」と言っているのではないかと、誤解されている可能性はないだろうか。<br>
+（45）繰り返すが「城」は「ギ」ではなく、｢キ」と清音なのである<br>
+41．
+１ あるいは ２ ただし
+３ かえって ４ なんとなく<br>
+42．
+１ しか ２ ほど ３ にも ４ では<br>
+43．
+１ なぜならば ２ たとえば
+３ はたして ４ それなら<br>
+44．
+１ 言っているとは ２ 言ってあるとのことで
+３ 言っているつもりでも ４ 言っているつもりだし<br>
+45．
+１ しかし ２ しかも
+３ それどころか ４ そういえ<br>
+    問題 8 次の（1）から（4）の文章を読んで、後の問いに対する答えとして最もよいもの
+を、1・2・3・4 から一つ選びなさい。 
+（1） 
+    <ruby>漢字<rt>かんじ</rt></ruby>
     意志力とは、常に身の回りにあるあらゆる誘惑に流されず、「衝動的な自己をコントロ
 ールして物事を成し遂げる力」のことである。学業で成功するかどうかも、優れたリーダ
 ーシップを発揮できるかどうかも、意志力が決め手だ。しかし、意志力のチャレンジが失
 敗しそうになると、私たちは怠け者だからなどと自分の性格のせいにしがちだ。しかし、
 大抵の場合は、慢性的にストレス状態にあるなど、心と体が自己コントロールに適さない
 状態にあるだけだ。その場合は前面に出てくるのは衝動的な自己となる。意志力のチャレ
-ンジで成功するためには、それらの状態を整える必要があるのだ。
-46．筆者が最も言いたいことは何か。
+ンジで成功するためには、それらの状態を整える必要があるのだ。<br>
+46．筆者が最も言いたいことは何か。<br>
 １ 意志力とは社会で成功するためになくてはならない力である。
 ２ 人の性格によって意志力のチャレンジが失敗することもある。
 ３ 心と体の状態を整えれば、意志力のチャレンジに成功することができる。
 ４ 衝動的な自己がコントロールできない時はストレスが発散できるようなことをした
- ほうがいい。
- 
- 
- 
+ ほうがいい。<br>
+
 （2） 
 知識人として生きていくためには何をすればよいか。まず日頃からできることとして、
 日刊紙を読むことがある。たった今の世界がどのようになっているか、世界の見取り図を
@@ -33,22 +73,16 @@
 トを見れば十分」と言った理由から新聞は見ないという人もいる。確かに知りたいことの
 主題が分かっている時、インターネットはその先を提供してくれる。しかし、世の中に無
 数のことが日々発生している中で「何が問題か」を知るには、およそ無関係と思われる記
-事が雑然
-ざつぜん
-（注１）と並置
-へいち
-（注２）されている紙の新聞の紙面が要る。インターネットには
-深さはあるが広さがない。
+事が雑然ざつぜん（注１）と並置へいち（注２）されている紙の新聞の紙面が要る。
+インターネットには深さはあるが広さがない。<br>
 （注１）雑然：いろいろなものが入り乱れて、まとまりのないさま
 （注２）並置：並列に並べること
-47．筆者が最も言いたいことは何か。
+47．筆者が最も言いたいことは何か。<br>
 １ 知識人になるには、日頃から世界情勢をよく知っていなければならない。
 ２ 新聞は全ての情報が一斉に入ってくるため、多様な分野の情報を自然と知ることが 
  できる。
 ３ インターネットでは自分が興味のある情報だけを得ることが多い。
-４ 自分が知りたいことについて情報を得るには新聞よりインターネットの方がいい。
-
-11
+４ 自分が知りたいことについて情報を得るには新聞よりインターネットの方がいい。<br>
  
 （3）
 今人間が行っている仕事の多くが、飛躍的な発展を遂げている人工知能に取って代わら
@@ -58,16 +92,13 @@
 きなのである。近年よく耳にするようになった「地頭がいい」という言葉は、「知識を詰
 め込んだのではなく、柔軟な発想ができて新しい分野にも短期間で対応できる力を持って
 いる」ということを指している。言い換えれば、先に触れた「従来の優等生」とは正反対
-の能力であるといえる。
-48．筆者が最も言いたいことは何か。
+の能力であるといえる。<br>
+48．筆者が最も言いたいことは何か。<br>
 1 人工知能の発展に伴い、もっと知識の豊富な人材が必要となる。
 2 どんなに人工知能が発達しても、人間の方が優れているので心配する必要がない。
 3 今までとは違って、これからは探究心や応用力が高い人材が必要となる。
-4 これから先企業が必要とする人材は多様な分野で頭角を現す人材である。
- 
- 
-12
- 
+4 これから先企業が必要とする人材は多様な分野で頭角を現す人材である。<br>
+
 （4） 
 同じ大学卒業で、同じ勉強をしてきた人なのに、就職試験で受かる人と落ちる人がいる
 のは、なぜでしょう？同じだけ学費を払い、同じだけ教室にいたのに。その理由は、明快
@@ -76,16 +107,15 @@
 ものです。私も資格を持っていますし、その恩恵も受けてきました。ですが、それが全て
 とは思わないでほしいのです。数々の資格を持っているのに、なぜ就職が決まらない人が
 いるのか？昇進しない人がいるのか？それは、資格以上に、会社にとって大事に思う何か
-があったということです。
+があったということです。<br>
 49．筆者は資格をどのようなものだと考えているか。
 １ 就職試験の時に持っていれば必ず役に立つ便利な武器
 ２ 卒業した大学がどこかよりも大切な、絶対的な切り札
 ３ 誰を採用するかを判断するために、会社が最も大事だと考えるもの
-４ 誰に対してもわかりやすくその人の能力をアピールできるものの一つ
-
+４ 誰に対してもわかりやすくその人の能力をアピールできるものの一つ<br>
  
 問題 9 次の（1）から（3）の文章を読んで、後の問いに対する答えとして最もよいもの
-を、1・2・3・4 から一つ選びなさい。 
+を、1・2・3・4 から一つ選びなさい。 <br>
 （1） 
 日本人は一般的には、神社仏閣、能(注１)や茶道など、古きよき日本の伝統が好きで、
 それを誇りに思っているのだが、その一方で、実生活では伝統などはお構いなしである。
@@ -94,47 +124,38 @@
 スなどに比べてきわめて低い。実際、現在の日本語は横文字カタカナを抜きには成り立た
 なくなっている。年々大袈裟になるクリスマスのイルミネーションが終わると、正月には、
 依然として大勢の人が神社仏閣に初詣に行く。クリスマスまではまだよいとして、最近は、
-ハロウィーンも定着しつつあるようだ。
-その一方で、立春から大寒までの二十四節気にそった日本の伝統行事は、テレビのニュ
-ースの 枕詞
-まくらことば
-(注２)である。
-また、食べ物に強いこだわりをもつ日本人は、旬にこだわるが、今は養 殖
-ようしょく
-、輸入、ハ
-ウス栽培などで、ほとんど一年中手に入る。イチゴもスイカも一年中あるといってもよい。
-二十四時間営業のコンビニが繁茂
-はんも
+ハロウィーンも定着しつつあるようだ。その一方で、立春から大寒までの二十四節気にそった日本の伝統行事は、
+テレビのニュースの 枕詞まくらことば(注２)である。また、食べ物に強いこだわりをもつ日本人は、
+旬にこだわるが、今は養 殖ようしょく、輸入、ハウス栽培などで、ほとんど一年中手に入る。
+イチゴもスイカも一年中あるといってもよい。二十四時間営業のコンビニが繁茂はんも
 (注３)するように、消費者が望むことなら、利便性の向
 上のためにならなんでもやる。アメリカに勝るとも劣らない商業マインドである。こうし
 た高度消費者中心資本主義が、日本の一面としてすでに社会に根を下ろしている。
 さらに、最近ではボジョレー・ヌーボーに始まり、イタリア産ポルチーニ（注４）やト
 リュフなどといった外国産のもので旬を感じて楽しむといった②本末転倒なことを国民挙
-げ(注５)て行なっている。
+げ(注５)て行なっている。<br>
 (注１) 能：日本の伝統芸能
 (注２) 枕詞：ある特定の言葉にかかる修飾的な言葉
 (注３) 繁茂：繁盛・繁栄すること
 (注４) ポルチーニ：キノコの一種
-(注５) 国民挙げて：国民すべて
-
+(注５) 国民挙げて：国民すべて<br>
  
 50．①国語における伝統の軽視とはどういう意味か。
 1 最近の若者は国語より英語の教育にもっと力を入れている。
 2 最近の若者は日本の伝統的な文化に関心がない。
 3 最近の若者は外来語を使用することが多くなった。
-4 最近の若者は日本の古典を嫌う傾向がある。
-51．②本末転倒なこととして合っているものはどれか。
+4 最近の若者は日本の古典を嫌う傾向がある。<br>
+51．②本末転倒なこととして合っているものはどれか。<br>
 1 日本の若者は日本の伝統を見下ろしていて、カタカナ語はよく使っている。
 2 日本人はお正月の行事より外国から入った文化をもっと楽しんでいる。
 3 日本の伝統の旬にこだわっているにもかかわらず、一年中旬のものが食べられる
  ようにしている。
-4 日本の伝統である旬を外国産のもので楽しんでいる。
-52．筆者が最も言いたいことは何か。
+4 日本の伝統である旬を外国産のもので楽しんでいる。<br>
+52．筆者が最も言いたいことは何か。<br>
 1 日本では伝統も海外の文化も大切にしている。
 2 海外の文化を抵抗なく受け入れる日本人の考え方は理解しにくい。
 3 海外の文化がどんどん入ってくるため、だんだん伝統文化が失われつつある。
-4 日本人にとって伝統文化はなくてはならないものである。
-
+4 日本人にとって伝統文化はなくてはならないものである。<br>
  
 （2） 
 暴力と言論とは、ふつう、まったく対立的なものと考えられている。①一般論としては、
@@ -143,10 +164,8 @@
 あるということを意味している。だから、私たちは、一方において、人を攻撃したり傷つ
 けたり支配したりする「暴力的」な側面を言論のなかにみいだすことができると同時に、
 他方においては、暴力を一種の言論として（あるいはむしろコミュニケーションとして）
-とらえることもできる。
-たとえば、主君をいさめるための切腹
-せっぷく
-（注）、身の潔白を訴えるための自殺、あるいは
+とらえることもできる。たとえば、主君をいさめるための切腹せっぷく（注）、
+身の潔白を訴えるための自殺、あるいは
 何かに抗議するための自殺と言ったケースを考えてみると、これらはすべてわが身に暴力
 を加えることによって何かをアピールしているわけであるから、このような場合の暴力は
 明らかに一種のコミュニケーション、非言語的コミュニケーションである。
@@ -157,8 +176,7 @@
 コミュニケーションを継続しているのかもしれない。
 (注) 切腹：刃物などで自らの腹部を切り裂いて死ぬ自殺の一方法
 
- 
-53．ここで言う①一般論とは何か。
+ 53．ここで言う①一般論とは何か。
 1 暴力とはよくないものである。 
 2 暴力と言論は全く違うものである。
 3 暴力と言論は似ているものである。 
@@ -173,56 +191,48 @@
 2 自分に対する暴力だけでなく、他人に対する暴力も許してはならない。
 3 暴力と言論は共通性を持っている。
 4 コミュニケーションとしての暴力は許すべきである。
- 
- 
- 
+  
 （3） 
 学校で習う ①歴史や教科書に書かれている歴史は、政治の流れや権力の移り代わりを
 中心に語られることが多い。そこに登場する人物も、歴史の表舞台で活躍した英雄や政治
 家、宗教家や文化人といった有名人ばかりである。歴史は、あたかもそのような人たちに
 よってつくられたかのように錯覚してしまいがちである。
 しかし ②実際はそうではない。歴史とは、一部の権力者たちによる物語などではなく、
-無数の人々によって紡
-つむ
-がれて（注１）きた豊かで多様な時間の集合体なのだ。そう考えて
+無数の人々によって紡つむがれて（注１）きた豊かで多様な時間の集合体なのだ。そう考えて
 みると歴史を考えるヒントというのは、あらゆるところにひそんでいるといえる。いま生
 きている社会や自分自身の暮らしを見つめなおすこともまた、歴史を考えるための大きな
 ヒントなのである。
 私は歴史を勉強するようになって、いつのころからか、そんなことを考えるようになり、
-政治の歴史や権力者の歴史とは対歴語
-たいれきご
-（注２）にある歴史を描いてみたい、と思うように
+政治の歴史や権力者の歴史とは対歴語たいれきご（注２）にある歴史を描いてみたい、と思うように
 なった。だが、実際のところ、その作業はとても難しい。歴史を知るための古文書や記録
 はその多くが、当時の権力者たちがみずからの正当性を主張するために残したものだから
-である。
-しかし、「たまたま」「はからずも」残った史料、というものもある。(中略)
+である。しかし、「たまたま」「はからずも」残った史料、というものもある。(中略)
  私はいつのころからか、そうした断片的な資料から、歴史の表舞台にあらわれない過去
 の人々の思いを探るという手法に、のめり込んでしまった。そして、そうした細やかな史
 料にこだわればこだわるほど、その当時の社会の本質を垣間見ることができるのではない
-かと思うようになっていった。「③歴史は細部に宿る」という思いを強くしたのである。
+かと思うようになっていった。「③歴史は細部に宿る」という思いを強くしたのである。<br>
 （注１) 紡ぐ：複数のものをつなげて作り上げる
-（注２）対歴語：意味が反対となる語や、意味が対照的になっている語
-
+（注２）対歴語：意味が反対となる語や、意味が対照的になっている語<br>
  
 56．ここで言う①歴史に合っていないものはどれか。
 1 その時代の英雄や権力者によって書かれた歴史。
 2 あらゆるところにひそんでいるヒントによって書かれた歴史。
 3 権力者たちが自分を正当化するために書いた歴史。
-4 有名人によってつくられたかのように錯覚してしまう歴史。
+4 有名人によってつくられたかのように錯覚してしまう歴史。<br>
 57．②実際はそうではないとあるが、これはどういうことか。
 1 歴史はその時代を生きていた全ての人々によってつくられたものである。
 2 歴史とは今を生きている私たちがつくっていくものである。
 3 学校などで習った歴史は全て間違った歴史である。
-4 私たちが知っている歴史は権力者によって書き換えられたものである。
-58．③歴史は細部に宿るとはどんな意味か。
+4 私たちが知っている歴史は権力者によって書き換えられたものである。<br>
+58．③歴史は細部に宿るとはどんな意味か。<br>
 1 細かいこだわりによってもっと歴史をよく知ることができる。
 2 私たちが知っている歴史が本当なのか確かめるべきである。
 3 歴史は時間をかけて地道に研究していくものである。
-4 あまり細かいことは気にせずにもっと深究していくべきである。
+4 あまり細かいことは気にせずにもっと深究していくべきである。<br>
 
  
 問題 10 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br>
  山の畑の工作を始めた頃、私は村の人々の使うある言葉のなかにおもしろい使い分けの
 あることに気付いた。それは「稼ぎ」と「仕事」の使い分けだった。
 「稼ぎに行ってくる」村人がそう言うとき、それは賃労働に出かける、あるいはお金のた
@@ -250,39 +260,33 @@
 である。同じようにたとえば山の下枝を伐りに行くときでも、そこに自分の主体性が発揮
 できるとき、労働を自分の手で工夫できるときには村人は「仕事」に行くと表現した。誰
 に命令されるわけでもなく、労働の結果がいつの日かお金になるかどうかもわからない。
-しかし下枝を伐り、木を育て、自然と人間の交流を培っていく行為がそこにはある。
-
- 
-ところが全く同じ労働をするときでも、たとえば営林署
-えいりんしょ
-（注）の下請仕事のようなかた
-ちで下枝を伐りに行くときには、それは、④村人にとっては「仕事」ではなく「稼ぎ」だ
-った。
-(注) 営林署：国・公有林の管理・経営にあたった役所
-59．村人の考える①「稼ぎ」として合っていないものはどれか。
+しかし下枝を伐り、木を育て、自然と人間の交流を培っていく行為がそこにはある。 
+ところが全く同じ労働をするときでも、たとえば営林署えいりんしょ（注）の下請仕事のようなかた
+ちで下枝を伐りに行くときには、それは、④村人にとっては「仕事」ではなく「稼ぎ」だった。
+(注) 営林署：国・公有林の管理・経営にあたった役所<br>
+59．村人の考える①「稼ぎ」として合っていないものはどれか。<br>
 1 お金を稼ぐためにする仕事。
 2 あまりしたくない仕事。
 3 お金になる仕事。
 4 自然と関係のある仕事。
-60．村人の考える②「仕事」とは、どんなものか。
+60．村人の考える②「仕事」とは、どんなものか。<br>
 1 誰かに強いられてする仕事。
 2 日々の生活のためにする仕事。
 3 お金にならなくても、楽しい仕事。
 4 満足はできないが、しなければならない仕事。
-61．③ に入る文章を選びなさい。
+61．③ に入る文章を選びなさい。<br>
 1 「仕事」をして、その結果、生活もうまくいくこと。
 2 「稼ぎ」に出て、多くの収入を得ること。
 3 働かないで豊かに暮らすこと。
 4 都会に出て、便利な暮らしをすること。
-62．④村人にとっては「仕事」ではなく「稼ぎ」だったのはどうしてか。
+62．④村人にとっては「仕事」ではなく「稼ぎ」だったのはどうしてか。<br>
 1 自然と交流できる仕事ではなかったから。
 2 使用価値がある仕事ではなかったから。
 3 お金が稼げる仕事だったから。
 4 自分が主体性を持って仕事をするのではないから。
-
  
 問題 11 次の A と B はゲノム編集生産物についての意見である。後の問いに対する答えと
-して最もよいものを、1・2・3・4 から一つ選びなさい。 
+して最もよいものを、1・2・3・4 から一つ選びなさい。 <br>
 A 
 デジタルデトックスとは、一定期間スマートフォンやパソコンなどのデジタルデバイ
 スとの距離を置くことでストレスを軽減し、現実世界でのコミュニケーションや、自然
@@ -291,8 +295,7 @@ A
 ていくために行うものである。電車に乗っている時などのふとした瞬間にスマホを見な
 いだけでも新たな気付きがあったり、様々なポジティブな効果を体験することが出来
 る。研究によると人は自然とつながることで、本来持っている生命力を活性化すること
-が出来、ストレスホルモンの数値が良い数値を示すという。
- 
+が出来、ストレスホルモンの数値が良い数値を示すという。<br>
  
 B 
 そもそもデトックスで大事なことは、文字通り体内の毒物がある場合に、排出しなけ
@@ -305,19 +308,16 @@ B
 にすることはできるが、その分スマホを見る回数が増え、スマホなしの生活ができるわ
 けではない。｢昔はみんなスマホなしの生活をしてたよ！｣と言う人もいるかもしれない
 が、はたして昔のように紙の地図だけを頼りに旅をすることで十分だと思えるだろう
-か。
- 
- 
-（注）堆積：いく重にも高く積み重なること
+か。 
+（注）堆積：いく重にも高く積み重なること<br>
 
- 
 63．ＡとＢに共通して述べている内容はどれか。
 1 デジタルは人にストレスを与えるものなので、できるだけ使わない方がいい。
 2 すでにデジタルと共存している私たちにとってそれを完全に手放すことはでき 
  ない。
 3 今のような現状ではデジタルデトックスは不可能である。
-4 デジタルデトックスを通して、人間の生活をより豊かにすることができる。
-64．ＡとＢの内容から分かることとして正しいものはどれか。
+4 デジタルデトックスを通して、人間の生活をより豊かにすることができる。<br>
+64．ＡとＢの内容から分かることとして正しいものはどれか。<br>
 1 Ａは人間のストレスはデジタルから来ているため、ストレス解消のためにも現実世
  界とのコミュニケーションを大切にするべきであると述べている。
 2 Ａは日常生活の中で少しの間だけでもスマホを使わないことによって、様々な肯定
@@ -325,13 +325,10 @@ B
 3 Ｂは本来デジタルとは排出しなければならない毒ではないし、デジタルを使う習慣
  も直せるものではないから、直そうと努力する必要がないと述べている。
 4 Ｂではダイエットのようにデジタルデトックスをしているうちにだんだんデジタル
- を意識しなくなり、昔の習慣に戻るまで罪悪感も減らすことができると述べている。
- 
- 
- 
+ を意識しなくなり、昔の習慣に戻るまで罪悪感も減らすことができると述べている。<br>
  
 問題 12 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br>
 かつて大人たちは、子供たちがゲームやテレビアニメに熱中しているのを見ると、「現
 実とヴァーチャル世界の区別のつかない人間になってしまう」と心配した。そして、時に
 子供たちが信じがたい、残忍な犯罪を起こすと、「ゲームやアニメの世界で簡単に人が死
@@ -340,9 +337,7 @@ B
 にするたびに、「いくらゲームやアニメ漬けの生活をしていたとしても、実際に現実とヴ
 ァーチャルの区別がつかなくなり、シューティングゲームで敵を殺すように、簡単に人間
 を殺してしまうなんてことは、まずあり得ない」と、多くの人は思っていたはずだ。
-①そういった論調は実際、言っている側も、子供たちの射幸心
-しゃこうしん
-（注 1）を煽るろと刷る
+①そういった論調は実際、言っている側も、子供たちの射幸心しゃこうしん（注 1）を煽るろと刷る
 アニメやゲーム業界に対する批判といった色合いが強く、本当のところ、どこまで信じて
 いたのかも怪しい気がする。
 それほどに、かつて「現実世界」というものは確固たるものと信じられていた。しかし、
@@ -359,35 +354,32 @@ B
 もはや当たり前になってしまった日常風景なのだが、少し引いてみると、ある種異様な光
 景でもある。彼らは、本当に「現実世界」を生きているのだろうか。
 また、こういった情報化社会の中でぼくらは現実世界のほとんどに「情報」あるいは
-「データ」として接触するようになった。現実世界は何者かによって恣意的
-しいてき
+「データ」として接触するようになった。現実世界は何者かによって恣意的しいてき
 (注３)に編集
 され、集約され、それをぼくらも恣意的に選択する。言うまでもなく、ぼくらの現実認識
 は情報によってしかなされなくなってしまったのだ。ぼくらが「現実だ」と思いこんでい
-るものの多くも、実際のところ本当にそうかどうかは怪しくなっているのである。
+るものの多くも、実際のところ本当にそうかどうかは怪しくなっているのである。<br>
 
- 
-(注１)射幸心：努力や苦労をすることなく、利益や成功だけを願う気持ち
+ (注１)射幸心：努力や苦労をすることなく、利益や成功だけを願う気持ち
 (注２)身体化する：体の一部になっている。当たり前になっている。
-(注３)恣意的に：思うままに。勝手に
-65．①そういった論調として合っているのはどれか。
+(注３)恣意的に：思うままに。勝手に<br>
+65．①そういった論調として合っているのはどれか。<br>
 1 アニメやゲーム業界が子供たちの射幸心を煽っているということ。
 2 現実の世界とゲームが区別がつかなくなっているということ。
 3 ゲームの影響で犯罪が増えているということ。
-4 アニメやゲーム業界をいたずらに批判しているということ。
-66．②キャラ化の意味として正しいものはどれか。
+4 アニメやゲーム業界をいたずらに批判しているということ。<br>
+66．②キャラ化の意味として正しいものはどれか。<br>
 1 自分の好きなキャラクターの行動や服装を真似ること。
 2 アニメやキャラクターが好きすぎてそれ以外のことに興味を持たないこと。
 3 現実よりもアニメやキャラクターにリアリティを感じてしまうこと。
-4 アニメやキャラクターが自分の理想の姿であると思ってしまうこと。
-67．③「現実世界」を奪いつつあるのはどんな理由からなのか。
+4 アニメやキャラクターが自分の理想の姿であると思ってしまうこと。<br>
+67．③「現実世界」を奪いつつあるのはどんな理由からなのか。<br>
 1 携帯電話の普及により、業務時間が増え、プライベートな時間が減ったから。
 2 高度情報化社会になり、日常の多くの時間を仮想世界で過ごすようになったから。
 3 ゲームをする時間が増え、それ以外の活動をしなくなったから。
-4 現実から逃避し、仮想世界で楽しみを感じる人が増えたから。
-
+4 現実から逃避し、仮想世界で楽しみを感じる人が増えたから。<br>
  
-68．筆者の最も言いたいことは何か。
+68．筆者の最も言いたいことは何か。<br>
 1 今の社会では現実を情報としてしか捉えられず、しかも意図的に選別されたデータ
  に依存する傾向にある。
 2 情報を通して現実と接触している今の社会では対人関係の構築が難しくなって
@@ -399,17 +391,16 @@ B
 する答えとして最もよいものを、1・2・3・4 から一つ選びなさい。 
 69．音声学を専攻している修士 1 年生の佐藤さんは、自分の興味がある論文を見つけまし
 た。しかし、その論文は興味深い内容が含んでいるものの、その議論には賛同できません。
-佐藤さんはどのような書き方をしてレポートを提出しますか。
+佐藤さんはどのような書き方をしてレポートを提出しますか。<br>
 １ なぜその意見を採用したかを明確にし、自分の意見を加えて説明をする
 ２ 賛成しない部分を引いて内容を要約する
 ３ 反論のデータや反例を用いて論理的に反証する
-４ 説得力のある参考文献や先行研究を用いて徹底的に批判する
-70．本文の内容と合っているのはどれか。
+４ 説得力のある参考文献や先行研究を用いて徹底的に批判する<br>
+70．本文の内容と合っているのはどれか。<br>
 １ 締切日を過ぎて提出する場合は研究室へ直接持って行かねばならない
 ２ 修士論文の一部分になるような議論を展開してもよい
 ３ 音声学論文の書き方を必ず守らなければならない
 ４ 縦書きにし、表紙には題名、氏名、所属、提出月日をつける
-
 レポート課題：音声学演習（2020 年前期・木曜） 
 1．自分の研究テーマに沿った小論文を書いてください。以下のいずれのタイプのもので
 も結構です。 
@@ -434,7 +425,7 @@ B
 のこと
 ＊ 帰省あるいは帰国する人は takahashi@yaho.ne.jp あてに添付メールで送ること
 
-</pre>
+</div>
 <p>
     <a class="setting--a"  href="index.html">home</a>
     <a class="setting--a"  href="testp2.html" target="_blank">link testp2</a>
