--- a/testp10.html
+++ b/testp10.html
@@ -7,10 +7,10 @@
     <title>tp10</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
-    <pre>
-        問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+<body>
+<div  class="setting--page">
+問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
+ら一つ選びなさい。 <br>
 西新宿 3 丁目の新宿パークタワーで 24 日まで開かれているケアデザイン展の会場。曲
 がりくねったデザインの手すりを体験する人の姿が（41）。お年寄りが安全に心地よく階
 段を上り下りできるよう、つえの機能も併せ持ったもので、直線状の手すり（42）安心し
@@ -36,36 +36,34 @@
 重要だと説明した。
 司会役の清水忠男・千業大名誉教授は「ケアを支えるデザインは金持ちのためのもので
 はない。様々な現場の条件の中で、（45）解決法を導き出すのがデザイナーの役目」と
-語った。
-
- 
+語った。 <br> 
 41.
-１ 絶える ２ 絶えない ３ 絶えまい ４ 絶えまない
+１ 絶える ２ 絶えない ３ 絶えまい ４ 絶えまない <br>
 42.
-１ に加えて ２ に至って ３ にあって ４ に比べて
+１ に加えて ２ に至って ３ にあって ４ に比べて <br>
 43.
-１ 機に ２ 皮切りに ３ はじめに ４ 最後に
+１ 機に ２ 皮切りに ３ はじめに ４ 最後に <br>
 44.
-１ a 的/b 性 ２ a 面/b 化 ３ a 性/b 面 ４ a 観/b 化
+１ a 的/b 性 ２ a 面/b 化 ３ a 性/b 面 ４ a 観/b 化 <br>
 45.
 １ 何とか ２ 何とも ３ 何でも ４ 何にも
-  
+<br>
  
 問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。  <br>
 (1) 
 新聞で、昨年 1 年間の交通事故による死者の数が 5000 人を下回ったという報道に接し
 た。もちろん喜ぶべき数字ではない。「1 年間に 5000 人近くもの人が亡くなっている」と
 受け取るほうが正常な感覚だとは思う。しかしこの数字は、飲酒運転の厳罰化、シートベ
 ルトの着用率の向上、車の安全性能の進化、交通マナー全般の向上など、多くの人々の努
 力の結果であるという事実に、希望を見出してもよいのではないだろうか。究極の目標は
-交通事故死ゼロであるにしても。
-46. 筆者がここで最も言いたいことは何か。
+交通事故死ゼロであるにしても。 <br>
+46. 筆者がここで最も言いたいことは何か。 <br>
 １ 交通事故による死亡者は本来一人もあってはならない。
 ２ 年間の交通事故による死者が 5000 人もいるのは悲しむべきことである。
 ３ 交通事故を減らすための努力が成果を上げていることをある程度評価すべきだ。
-４ 現代の車中心の社会を変えなければ交通事故による死者はなくならない。
-(2) 
+４ 現代の車中心の社会を変えなければ交通事故による死者はなくならない。 <br>
+(2)  <br>
 「コンテクスト」という言葉を時々目にする。「文脈・前後関係」と訳されることもあ
 る。「あること」が、どんな場面や状況で登場するのかによって、「そのこと」の意味や
 価値、正否なども変わる。人間の行動の「正しさ」も、その多くは、コンテクストに左右
@@ -74,24 +72,24 @@
 口の駅へと向かう人がほとんど乗っていない電車の中、という状況の中で行われたとした
 らどうだろう。
 世の中には、もちろん総対的な悪というものもあるだろう。しかし、それ以外の多くの
-ものはコンテクストに依存していると言えるのではないだろうか。
-47. 筆者がここで最も言いたいことは何か。
+ものはコンテクストに依存していると言えるのではないだろうか。 <br>
+47. 筆者がここで最も言いたいことは何か。 <br>
 １ 人間の行動の正しさや価値に対する判断は不変である。
 ２ 混雑した電車の中で物を食べるのは、いかなる場合でもマナーに反する行為である。
 ３ ある行動の正しさや価値は、文脈の中で判断される必要があるのではないか。
-４ あらゆるものが前後関係で決まるので、絶対的な悪というものは存在 しない。
+４ あらゆるものが前後関係で決まるので、絶対的な悪というものは存在 しない。 <br>
 
 (3) 
 写真をとられるときなどに、手をどこにおこうかと考え始めて困惑してしまうことがあ
 る。両手を前で重ねて組むか、後ろるで組むか、それとも脇にのばしておくのがよいか、
 手はまったくあつかいにこまるのだ。それというのも、手や指は否応なしに、その人間の
 意識の方向や意思や気分などをあらわしだすものであり、その過剰な意味作用が人間のか
-らだをわざとらしく、ぎこちないものにしてしまうからだ。
-48. 筆者はどうして困惑してしまうのか。
+らだをわざとらしく、ぎこちないものにしてしまうからだ。 <br>
+48. 筆者はどうして困惑してしまうのか。 <br>
 １ 不必要に意味や感情を表さない位置に置くのが難しいから。
 ２ 手の位置によって、嘘をついているのがわかってしまうから。
 ３ 顔より手のほうが過剰な表現が可能で、わざとらしい写真になるから。
-４ 手の位置がぎこちないと、自分の気持ちが十分に表現できないから。
+４ 手の位置がぎこちないと、自分の気持ちが十分に表現できないから。 <br>
 (4) 
 カップラーメンが日本人の発明によることは知っていても、インスタントコーヒーが日
 本人の発明であることを知らない人は多いのではないでしょうか。また「インスタント」
@@ -100,8 +98,8 @@
 つの製法があり、その一つがフリーズドライ製法と呼ばれるものだそうです。そしてこの
 製法はハイテクを利用した、豆の香りを損なうことなくコーヒーを入れる最も合理的な方
 法の一つだという内容を読んで、私はインスタントコーヒーに対する見方を大きく変え
-ました。
-49. 筆者がここで最も言いたいことは何か。
+ました。 <br>
+49. 筆者がここで最も言いたいことは何か。 <br>
 １ カップラーメンもインスタントコーヒーも日本人が発明したハイテク製品である
  こと。
 ２ レギュラーコーヒーよりもインスタントコーヒーのほうが、優れた飲み物である
@@ -109,9 +107,8 @@
 ３ レギャラーコーヒーもインスタントコーヒーも全く同じ飲み物であるということ。
 ４ インスタントコーヒーは決して、二流のコーヒーではないということ。
 
- 
 問題 9 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。  <br>
 (1) 
 若者はなぜ自動車を買わなくなったのか。自動車メーカーで販売戦略に携わる人が、あ
 る研究会で理由をあげた。所得の減少。公共交通の充実する都市部への人口集中。未婚率
@@ -127,28 +124,26 @@
 消費にまったく興味がないわけではない。ファッション、ゲーム、家具、外食への関心
 は高い。日常的で事故とも無縁。しかも、買う時期を待てば値段が下がるものが多いと松
 田さんは言う。値段は下がる。買い物は先送りがお得。それが若者の常識だとすれば、財
-布を開いてもらうのは容易ではない。
+布を開いてもらうのは容易ではない。 <br>
 （注 1）ダサい：おしゃれではない
-（注 2）家電：家庭用電気機器
-
+（注 2）家電：家庭用電気機器 <br>
  
-50.①価値観の変化とは、具体的に何のことか。
+50.①価値観の変化とは、具体的に何のことか。 <br>
 １ 昔の自動車メーカーの人は車が好きだったのに、今はそうではないこと。
 ２ 若者が車だけでなくものを買うことに全く興味を持たなくなったこと。
 ３ 昔の若者は車にあこがれがあったのに、今はをそうではなくなったこと。
-４ 自動車メーカーの人が販売の対象を若者からほかの人々に変えたこと。
-51.②大きな衝撃を受けたのはなぜか。
+４ 自動車メーカーの人が販売の対象を若者からほかの人々に変えたこと。 <br>
+51.②大きな衝撃を受けたのはなぜか。 <br>
 １ 若者の価値観の変化の仕方があまりに極端で急激なものだったから。
 ２ 最近の若者がいろいろな理由で車を買わなくなってしまったから。
 ３ 自分たちが好きだと思っている車を、若者が否定的に考えているから。
-４ 若者が車よりファッションやゲームのほうが好きになってしまったから。
-52.この文章によると、最近の若者が買いたいと思うものは何か。
+４ 若者が車よりファッションやゲームのほうが好きになってしまったから。 <br>
+52.この文章によると、最近の若者が買いたいと思うものは何か。 <br>
 １ 身近に使うもので、買う時期を考えれば安く手に入るもの。
 ２ 新製品が次々に発売され、先に買うことに価値があるもの。
 ３ 財布から現金を出さないで、簡単にカードで買えるようなもの。
-４ 危険な不良品が少なく、安い中古品で買っても安全なもの。
+４ 危険な不良品が少なく、安い中古品で買っても安全なもの。 <br>
  
-  
 (2) 
 時刻について、私が子供の頃は「4 時半」「5 時 10 分前」「5 時 10 分過ぎ」のような言
 い方がしばしばされていた。これらはいずれも時計の人針のイメージだったと思う。針が
@@ -170,25 +165,25 @@
 例えば、事務連絡的なメールのなかに「16時半」とあると、この「半」を見落としたり
 する。「半」に対する感度が落ちているのだ。それに気づいてからは自分がメールを書く
 ときには③「16 時 30 分」と表記するようになった。逆にこちらの（注 2）アナログ的個
-性を印象付けたい場合には、「半」「前」「過ぎ」などを使うといいのかもしれない。
+性を印象付けたい場合には、「半」「前」「過ぎ」などを使うといいのかもしれない。 <br>
 （注 1）フラット：平ら
 （注 2）アナログ：デジタル（数値で表すこと）ではないこと
  
-53.①「26 時」や「28 時」をみた記憶がない理由を筆者は何だと考えているか。
+53.①「26 時」や「28 時」をみた記憶がない理由を筆者は何だと考えているか。 <br>
 １ 昔のデジタル時計では「26 時」や「28 時」を示すことができなかったから。
 ２ 時計の針のイメージでは、「26 時」や「28 時」まで示すことができなかったから。
 ３ 子供の頃の筆者は、 「26 時」や「28 時」に活動していたことがなかったから。
 ４ 「26 時」や「28 時」を使って前日からの継続性を表現する必要がなかったから。
-54.②そうした環境とはどんな環境か。
+54.②そうした環境とはどんな環境か。 <br>
 １ 時間に対する感覚が鋭い環境。
 ２ 生活の時間を細かく分ける環境。
 ３ 時間を均一化してとらえる環境。
-４ 事務的な連絡をメールする環境。
-55.筆者が③「16 時 30 分」と表記ナるようになったのはなぜか。
+４ 事務的な連絡をメールする環境。 <br>
+55.筆者が③「16 時 30 分」と表記ナるようになったのはなぜか。 <br>
 １ 相手のデジタル的個性を印象づけたいから。
 ２ 自分が「半」を読み落とすかもしれないから。
 ３ 自分のデジタル的個性を印象づけたいから。
-４ 相手が「半」を読み落とすかもしれないから。
+４ 相手が「半」を読み落とすかもしれないから。 <br>
  
  
 (3) 
@@ -206,25 +201,25 @@
 仕事場だけを切り離して作った、と思っているのも、実は私の幻想かもしれないのである。
 私は単に、その外界と調和し、妥協する方法を考えたのかもしれない。③そう考えると私
 は自分を失ったような、元来持っていなかったようなこわれを感ずる。
-（注）米俵：米を詰めて藁で包んだもので、米を入れておくのに使う
-56. ①その中とは何の中か。
+（注）米俵：米を詰めて藁で包んだもので、米を入れておくのに使う <br>
+56. ①その中とは何の中か。 <br>
 １ 一時しのぎの仮の宿 ２ 日本の常識
-３ 日本の伝統的な家 ４ 自分が思うように作った家
-57.②外界とは何のことか。
+３ 日本の伝統的な家 ４ 自分が思うように作った家 <br>
+57.②外界とは何のことか。 <br>
 １ 米俵の外の世界 ２ 家族、同業者、隣人の外の世界
-３ 日本の常識が通用しない世界 ４ 私のまわりの私以外の世界
-58.③そう考えるとはどう考えるのか。
+３ 日本の常識が通用しない世界 ４ 私のまわりの私以外の世界 <br>
+58.③そう考えるとはどう考えるのか。 <br>
 １ 自分が作り出した自分だけの世界を、外界と調和させ、妥協させるのは実際には難
-しい可能性がある。
+しい可能性がある。 <br>
 ２ 自分が作り出した自分だけの世界だと思っていたものは、実際には存在しなかった
-可能性がある。
+可能性がある。 <br>
 ３ 私の世界を外界から切り離そうとしていたのに、実際には外界に調和し、妥協する
-結果となった。
+結果となった。 <br>
 ４ 自分特有の考え方を確立しようとしているが、実際には外界に調和 し、愛協しな
-ければならない。
+ければならない。 <br>
  
 問題 10 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。  <br>
 海外旅行をしていて急に①不安を覚えるときがある。冷蔵庫もないホテルで、夜中にの
 どが渇いたり、空腹感が募ってきたりしたときだ。何もないと思うとよけいに渇きや空腹
 が切実になる。そんなとき、街にはコンビニもないのだ。
@@ -241,35 +236,34 @@
 切りのない世界、そして、「隔たり」の感覚が薄れていく世界である。
 「喪失の喪失」を言われたときがあった。「何かがない」という喪失の感覚を喪失した
 豊かで便利な時代についての形容である。携帯電話やコンビニに依存する日々を送りなが
-ら、せめて「喪失」への感覚は失わないでいたい。
+ら、せめて「喪失」への感覚は失わないでいたい。 <br>
 （注 1）買い置きの算段：買えないときのことを考えて、あらかじめ買っておくこと
-（注 2）安住する：その状態に満足して、それ以上を望まない
+（注 2）安住する：その状態に満足して、それ以上を望まない <br>
  
-59.①不安を覚えるとあるが、何が不安なのか。
+59.①不安を覚えるとあるが、何が不安なのか。 <br>
 １ のどの渇きや空腹。
 ２ ホテルの設備。
 ３ コンビニがないこと。
-４ ほしいものがすぐ手に入らないこと。
-60.②不安になるとあるが、何が不安なのか。
+４ ほしいものがすぐ手に入らないこと。 <br>
+60.②不安になるとあるが、何が不安なのか。 <br>
 １ 失っていくものを省みず、便利な生活に満足すること。
 ２ 全国に 24 時間営業するコンビニが数多くできたこと。
 ３ 空腹などの我慢を強いられることがないこと。
-４ もうかつてのような不便な生活ができなくなってしまうこと。
+４ もうかつてのような不便な生活ができなくなってしまうこと。 <br>
 61.③時間や空間に対する考えがいま大きく変わりつつあるとあるが、今時間はどのよう
-に考えられているか。
+に考えられているか。 <br>
 １ 時間を気にせずに好きなだけ使うことができる。
 ２ 何時かということに制約されずに行動できる。
 ３ 時間は切れ目がなく続いている。
-４ 過去と未来の時の隔たりが薄れた。
-62.筆者はこれからどうしたいと考えているか。
+４ 過去と未来の時の隔たりが薄れた。 <br>
+62.筆者はこれからどうしたいと考えているか。 <br>
 １ 今の豊かで便利な生活はやめて、以前の「何かがない」生活に戻る。
 ２ 携帯電話とコンビニに依存する生活は送るが、それ以外では以前の生活に戻る。
 ３ 今の豊かで便利な生活に満足して、それ以上を望まない。
-４ 今の豊かで便利な生活を送るが、以前の「何かがない」生活も忘れないでいる。
- 
-  
+４ 今の豊かで便利な生活を送るが、以前の「何かがない」生活も忘れないでいる。 <br>
+   
 問題 11 次の A と B はそれぞれ別の新聞のコラムである。A と B の両方を読んで、後の問
-いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。 
+いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。  <br>
 A 
 どうも経済対策は怪しいところが多すぎる。なかでも、約 56 兆円とされる追加経済対
 策には、正直なところ「いいのかなぁ」がつきまとう。しかも、そのために新しく約 15
@@ -281,7 +275,7 @@ A
 国債といっても借金に違いはない。つまり「追加経済対策のために、さらに約 11 兆円
 の借金をする」である。それによって「今年度の借金は合計約 44 兆円」に達し、累計は
 現時点で「国債約 591 兆円」「日本全体の債務残高約 1082 兆円」となるらしい。
- 
+<br>
 B 
 政策に売りなしと言われ、10 兆円予想が 15 兆円まで増加したことで、8800 円の上値抵
 抗ラインで一旦止まって踊り場のような形になった株式市場でしたから、ここから一気に
@@ -291,28 +285,27 @@ B
 最大規模の景気対策の発表によって、少なくても 9320 円トライ、勢いがあれば 10500 円
 まで上昇しても不思議ではないと（空売りをしていて、私自身が好材料に敏感になってい
 ることあり）思っていたのですが、2 日目の後場でマイナスになるとは『予想外』の展開
-だと思います。
+だと思います。 <br>
 
-63. A と B のどちらの記事にも触れられている内容はどれか。
+63. A と B のどちらの記事にも触れられている内容はどれか。 <br>
 １ 新しく約 15 兆円を増加された。
 ２ 追加経済対策のために、さらに約 11 兆円の借金をする。
 ３ 株式市場での状況。
-４ 株のほうが、ここから一気に再上昇開始と思った投資家は多かった。
-64.10 兆円予想が 15 兆円まで増加したことで、株式市場は？
+４ 株のほうが、ここから一気に再上昇開始と思った投資家は多かった。 <br>
+64.10 兆円予想が 15 兆円まで増加したことで、株式市場は？ <br>
 １ ずっと上昇している。
 ２ 初めはマイナスになって、2 日目の後場で上昇する。
 ３ 初めは上昇して、2 日目の後場でマイナスになる。
-４ ずっとマイナスになる。
+４ ずっとマイナスになる。 <br>
 65. 15 兆円まで増加された経済政策について、A の作者と B の作者はどのような立場を
-取っているか。
+取っているか。 <br>
 １ A も B も認める。
 ２ A は認めるが、B は認めない。
 ３ A は認めないが、B は認める。
-４ A も B も認めない。
+４ A も B も認めない。 <br>
  
-  
 問題 12 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。  <br>
 「統計数理研究所」が「日本人の国民性調査」の結果を先月末に発表した。調査は昭和 28
 年から 5 年ごとに実施されているので、その結果を見ると、日本人の考え方の推移を認め
 られて興味深い。
@@ -342,8 +335,7 @@ B
 これはつまり、女性も男性も同じことができるので、男を羨ましがる必要がない、とい
 うのではなく、女性は女性として楽しく、それは男性より楽しさが大きい、ということを
 示しているようだ。と言って、ここで結論を急いで、男は「男らしく」、女は「女らしく」
-生きるのがよいなどということになっては、間違っています。
-
+生きるのがよいなどということになっては、間違っています。 <br>
  
 そもそも、そのときに言う「男らしい」「女らしい」とはどういうことを指すのか考え
 てみる必要がある。この調査で、男も女も共に、女の方が楽しみが大きいとしている理由
@@ -363,30 +355,30 @@ B
 男性と女性の問題は、非常に複雑で、（注 2）一筋縄では決してとらえられないし、男
 性的、女性的という意味も、決して明確にはならない。したがって、今日の調査結果に対
 して、早急な答えは出せないにしろ、ともかく②（注 3）ステレオタイプを破る面白いこ
-とが起こりつつあるとはいえそうである。
+とが起こりつつあるとはいえそうである。 <br>
 （注 1）男女共同参画社会：伝統的な女性蔑視の風潮、固定的な性別役割分担の意識をな
 くし、男女が平等に社会に参加すること。またその社会。
 （注 2）一筋縄：一本の縄（筋縄ではいかない：普通の手段では自分の思うとおりになら
 ない）
-（注 3）ステレオタイプ：紋切り型。決まり文句。常奏手段。
+（注 3）ステレオタイプ：紋切り型。決まり文句。常奏手段。 <br>
 
  
-66.①注目すべき点とは、どのようなことか。
+66.①注目すべき点とは、どのようなことか。 <br>
 １ 女性の 7 割が「女性に生まれ変わりたい」と願っている点。
 ２ 以前の調査と比べ、完全な逆転現象が起こった点。
 ３ 男性優位の状況で、男女共同参画社会が実現されている点。
 ４ 男性優位の状況で、男性より女性のほうが楽しみが多いと判断する点。
-67.筆者の述べている②ステレオタイプを破る面白いこととは、何か。
+67.筆者の述べている②ステレオタイプを破る面白いこととは、何か。 <br>
 １ 男性、女性の生き方や考え方に変化が生じていること。
 ２ 男は男らしく、女は女らしく生きることが逆転すること。
 ３ 男性優位の社会から女性有意の社会になって、男女の仕事が変わること。
-４ 今までと違って、男性が女性の生き方を羨ましがること。
-68. 今回の調査で、逆転現象が起きたのはなぜだと筆者は考えているのか。
+４ 今までと違って、男性が女性の生き方を羨ましがること。 <br>
+68. 今回の調査で、逆転現象が起きたのはなぜだと筆者は考えているのか。 <br>
 １ 男性優位の社会が改善され、女性が優位に立ちはじめたから。
 ２ 女性は女性として、それは男性より楽しさが大きいから。
 ３ 男性は社会的因習にとらわれているが、女性は自由で好きなことができるから。
-４ 男性の仕事を女性が、女性の仕事を男性ができることに一般の男女が気づいたから。
-69. 筆者がこの文章で最も言いたいことは、どれなか。
+４ 男性の仕事を女性が、女性の仕事を男性ができることに一般の男女が気づいたから。 <br>
+69. 筆者がこの文章で最も言いたいことは、どれなか。 <br>
 １ 男女共同参画社会が実現され、男性優位の社会が改善されてきてはいるが、まだま
  だ男性優位の状況があり、満足すべきではない。
 ２ まだまだ男性優位の状況の中で、自由で好きなことが出来る女性の時代が到来しつ
@@ -394,15 +386,15 @@ B
 ３ 男性は社会的因習にとらわれている一方で、「女の仕事」もするようになり、男ら
  しくするより、女らしくするほうが楽しいと気づいた。
 ４ 男性と女性の問題は複雑で速断はできないが、調査の結果を見ても何かが変わって
- いくかもしれないという予感がして興味深い。
+ いくかもしれないという予感がして興味深い。 <br>
  
 問題 13 次の A、B は、キャンプに持って行く物のリストと、準備の打ち合わせのメール
 である。下の問いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。 
-70. 共同で使うもので、足りないのは何か。
+70. 共同で使うもので、足りないのは何か。 <br>
 １ テント ２ シート ３ ランタン ４ 料理用ストーブ
 71. 次のうち、山口が市民会館で借りるものは何か。
 １ 食器 ２ 寝袋 ３ 椅子とテーブル ４ テント
- 
+<br>
   
 準備するもの 共同で使うもの 各自用意するもの テント 2
 シート 2
@@ -490,7 +482,7 @@ From: “山口”yamaguchi@alc-nl.co.jp
 Subject：Re：キャンプ
 了解
 山口
- </pre>
+</div>
     <p>
         <a  class="setting--a" href="index.html">home</a>
         <a class="setting--a"  href="testp11.html" target="_blank">link testp11</a>
