--- a/testp3.html
+++ b/testp3.html
@@ -7,10 +7,10 @@
     <title>tp3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="setting--page">
- <pre>
-        問題 7 次の文章を読んで、文章全体の趣旨を踏まえて、（41）から（45）の中に入る最
-もよいものを、1・2・3・4 から一つ選びなさい。 
+<body>
+<div class="setting--page">
+ 問題 7 次の文章を読んで、文章全体の趣旨を踏まえて、（41）から（45）の中に入る最
+もよいものを、1・2・3・4 から一つ選びなさい。 <br>
 「キラキラネーム」とは、常用漢字にない読み方をしたり、外国語由来の単語に漢字を
 あてたりする、珍奇な名前の総称である。1990年代半ばから増加したといわれているが、
 読み方がわからず名前の役割を果たしていない、ふざけている、親の学力の低さを表して
@@ -27,25 +27,23 @@
 少なくとも 15 年を生きる子どもの心境はいかばかりだろうか。個人的な好みや思いつき
 で子どもの将来を考えずに命名を行う親は、批判され（44）。子どもを苦しめる親の身勝
 手な行動は、児童虐待（45）。子どもが「キラキラ」とした人生を過ごせるように、親権
-者（注）には賢明な判断が求められる。
+者（注）には賢明な判断が求められる。 <br>
 （注）親権者: 未成年の子に対して有する権利と義務を行う者
 41．
- 1 がち 2 次第 3 末 4 つつ
+ 1 がち 2 次第 3 末 4 つつ <br>
 42．
- 1 たる 2 がてら 3 にたえない 4 づらい
+ 1 たる 2 がてら 3 にたえない 4 づらい <br>
 43．
  1 あるとばかりに 2 あるがままに
- 3 あるだけに 4 あるながらに
+ 3 あるだけに 4 あるながらに <br>
 44．
  1 てやまないだろう 2 てしかるべきだろう
- 3 てたまらないだろう 4 てはかなわないだろう
+ 3 てたまらないだろう 4 てはかなわないだろう <br>
 45．
- 1 にたえる 2 に至る 3 にあたらない 4 にほかならない
-
-60
+ 1 にたえる 2 に至る 3 にあたらない 4 にほかならない <br>
  
 問題 8 次の（1）から（4）の文章を読んで、後の問いに対する答えとして最もよいもの
-を、1・2・3・4 から一つ選びなさい。 
+を、1・2・3・4 から一つ選びなさい。 <br>
 （1） 翻訳ほんやくとは原文を他の言語に置き換えて表すことです。しかし一語一句違たが
 わず 直訳ちょくやくした文章は違和感があり、原文のニュアンスが伝わらないものがほとんどです。
 それは、言語
@@ -53,38 +51,27 @@
 視して翻訳してしまうからだと言えます。
 優れた翻訳を生み出すためには、「原文が伝えようとする情報を、他の言語で再構成す
 る」ことが最も重要です。そのためには原文の言語と翻訳対象となる言語、二言語に対す
-る高い語学力が必要となります。
-46．優れた翻訳について当てはまるものはどれか。
+る高い語学力が必要となります。 <br>
+46．優れた翻訳について当てはまるものはどれか。 <br>
 1 優れた翻訳とはすなわち直訳ではない。
 2 優れた翻訳は翻訳する言語の文化や思想を無視しても十分できる。
-3 一語一句違
-たが
-わず文字を置き換えたものが優れた翻訳である。
+3 一語一句違たがわず文字を置き換えたものが優れた翻訳である。
 4 優れた翻訳は原文に対する語学力さえあれば可能である。
-
-61
  
 （2） 
-東西日本建設株式会社
-総務部 田中様
-拝啓
-貴社ますますご清栄のことと心からお喜び申し上げます。
+東西日本建設株式会社総務部 田中様拝啓貴社ますますご清栄のことと心からお喜び申し上げます。
 平素は格別のご厚情を賜り、厚く感謝いたしております。
 さて、先日は千葉工場を見学させていただき誠にありがとうございました。中途採用
 の社員の一日も早い業務習得に工場見学が有効と考えましたが、田中様はじめ工場長
 の鈴木様のご尽力のおかげで、予想以上の効果があったと思われます。
 お忙しい中、大変ご丁寧なご案内を頂き、重ねて御礼申し上げます。
 今後とも引き続きご指導下さいますよう、よろしくお願い申し上げます。
- 敬具
-株式会社丸井ガラス
-営業部 竹井
-47．この文書で最も伝えたいことは何か。
+ 敬具株式会社丸井ガラス
+営業部 竹井47．この文書で最も伝えたいことは何か。
 1 社員教育に工場見学が欠かせないこと
 2 中途社員は早く業務を覚えなければならないこと
 3 工場の協力のおかげで社員教育がうまくいったこと
 4 社員の教育には大変な苦労があること
-
-62
  
 （3） 
 読書や文章創作などが趣味の女の子を「文学少女」といいます。この言葉のルーツは、
@@ -93,39 +80,33 @@
 この「文学少女」ですが、時代の流れと共に言葉の持つイメージが変わってきました。
 最初は積極的に知識を取り入れていく「先進的」「都会的」なイメージでしたが、恋愛や
 友情をテーマにした少女小説がブームになると「ロマンチック」、そして現代では「古風」
-「地味」といったイメージが加わるようになりました。
-48．この文章の内容と合っているものはどれか。
+「地味」といったイメージが加わるようになりました。 <br>
+48．この文章の内容と合っているものはどれか。 <br>
 1 「文学少女」に対するイメージは今も昔も同じだ。
 2 現代において「文学少女」といえば活発で積極的な女の子を思い浮かべる。
 3 時代の変化につれて「文学少女」が持つイメージが変わってきている。
-4 戦前の女学生たちは皆、本や新聞を読むのが苦手だった。
+4 戦前の女学生たちは皆、本や新聞を読むのが苦手だった。 <br>
  
 （4） 
-叙述者
-じょじゅつしゃ
-とは、物語を理解しやすいように説明し補足する役目を果たす物語の中の人物
+叙述者じょじゅつしゃとは、物語を理解しやすいように説明し補足する役目を果たす物語の中の人物
 のことです。ナレーター、語り手ともいいます。叙述者 = 作者という決まりはなく、作
 者によって造られた虚構の人物の場合も多々あります。また叙述者は、真実だけを語らな
 ければならないという決まりもありません。時には読者を欺き、事実を誇張し読者を惑わ
 す叙述者の登場は、物語を一層面白いものにしてくれます。
-このような叙述者を「信頼できない語り手」といいます。
+このような叙述者を「信頼できない語り手」といいます。 <br>
 49．叙述者について当てはまるものはどれか。
 1 叙述者は必ず作者でなければならない。
 2 叙述者は必ず真実だけを語らなければならない。
 3 「信頼できない語り手」とは、読者を惑わす叙述者のことをいう。
-4 「信頼できない語り手」が登場すると、その物語は面白くなくなる。
- 
-63
- 
+4 「信頼できない語り手」が登場すると、その物語は面白くなくなる。 <br>
+
 問題 9 次の（1）から（3）の文章を読んで、後の問いに対する答えとして最もよいもの
-を、1・2・3・4 から一つ選びなさい。 
+を、1・2・3・4 から一つ選びなさい。  <br>
 （1） 
 和食というと、低カロリーで栄養豊富なイメージが定着している。その歴史は長いが、
 その中でも「発酵食品」は豊かな発展を続けてきた。
 和食の特徴の一つともいえる「発酵」という技術は、微生物が栄養素として体内に取り
-込んだ有機物
-ゆうきぶつ
-（注 1）を、酸素を使わずに分解することである。この発酵の過程を経て
+込んだ有機物ゆうきぶつ（注 1）を、酸素を使わずに分解することである。この発酵の過程を経て
 生成された有機物が、人間に有益な効果をもたらすのである。これは、日本の高温多湿の
 気候により腐りやすい食品を長持ちさせるための技術でもあった。
 醤油しょうゆや味噌み そ、みりん、酢すなどは発酵によって造られるものであり、納豆や日本酒なども
@@ -142,29 +123,23 @@
 （注 2）糖化とうか：ブドウ糖がたくさんつながってできたデンプンを最小単位のブドウ糖に分
 解すること
 （注 3）酵母こうぼ：真核しんかく生物（核を持つ細胞さいぼう）のうち、真菌類にあたるもの
-（注 4）糸状菌しじょうきん：菌糸きんしと呼ばれる糸状の細胞から構成されている微生物
-
-64
+（注 4）糸状菌しじょうきん：菌糸きんしと呼ばれる糸状の細胞から構成されている微生物 <br>
  
-50．発酵はっこうがもたらすメリットとして正しくないものはどれか。
+50．発酵はっこうがもたらすメリットとして正しくないものはどれか。 <br>
 1 食材の新鮮さを保つことができる。
 2 発酵の過程で人々に有益な成分をつくり出す。
 3 医薬品や化学製品の開発に役立つ。
-4 保存できる期間が長くなる。
-51．発酵食品が誕生したのはなぜか。
+4 保存できる期間が長くなる。 <br>
+51．発酵食品が誕生したのはなぜか。 <br>
 1 湿気の多い日本ではよく食品にカビが生えるが、これを防ぐため。
 2 食品を日本の気候風土き こ う ふ う どに合わせ長持ちさせるため。
 3 医薬品の研究のため。
-4 カビから味噌み そを作るため。
-52．この文章からわかるコウジカビの役割は何か。
-1 酵母
-こうぼ
-の働きを助けるため、デンプンとタンパク質をつなげる。
+4 カビから味噌み そを作るため。 <br>
+52．この文章からわかるコウジカビの役割は何か。 <br>
+1 酵母こうぼの働きを助けるため、デンプンとタンパク質をつなげる。
 2 酵母の働きを助けるため、デンプンをブドウ糖に変える。
 3 酵母の働きを助けるため、ブドウ糖をデンプンに変える。
 4 酵母の働きを助けるため、ブドウ糖とタンパク質をつなげる。
-
-65
  
 （2） 
 日本語はしばしば、ハイコンテクストな言語だと言われる。ハイコンテクストとは、コ
@@ -179,24 +154,22 @@
 これらの違いは外国人とのやりとりに限ったことではない。日本人同士でも、世代や地域
 の差によってハイコンテクストとローコンテクストの違いを感じることもある。異なる基
 盤を持つ者同士が会話する際には、お互いが理解しやすいように話す努力が求められる。
-53．①多くを語らずとも相手の意図や気持ち、考え方を察することができるのはなぜか。
+53．①多くを語らずとも相手の意図や気持ち、考え方を察することができるのはなぜか。 <br>
 1 共通のコンテクストを作ろうという努力をするから。
 2 共通のコンテクストを持っているから。
 3 直接的で解りやすい表現を使うから。
-4 一言で気持ちを理解できる単語や表現が多いから。
-54．②努力不足とみなされるのはなぜか。
+4 一言で気持ちを理解できる単語や表現が多いから。 <br>
+54．②努力不足とみなされるのはなぜか。 <br>
 1 世代や地域の差を考慮した話し方でないから。
 2 シンプルかつ明瞭な話し方でないから。
 3 コンテクストを無視した話し方だから。
-4 遠回しな表現を使わない話し方だから。
-55．この文章で筆者が伝えたかったことは何か。
+4 遠回しな表現を使わない話し方だから。 <br>
+55．この文章で筆者が伝えたかったことは何か。 <br>
 1 伝達側は、「推測する」という楽しみを相手側に提供する努力が必要である。
 2 英語においてもハイコンテクストを意識した会話づくりが大切となってくる。
 3 コンテクストが異なる場合、誤解をうまない会話づくりに努めることが大切だ。
 4 日本人が英語圏の人と会話が弾まない理由はこのコンテクストの差のせいである。
 
-66
- 
 （3） 
 日本人には独特な美意識や感性がある。それは、大きく壮大なものより、小さくこぢん
 まりとした愛らしいものに対して感じる「美」である。大自然を縮小し投影した日本庭園
@@ -205,38 +178,32 @@
 」など小さい主人公が活躍する物語が多々あり、詩を 17 字に
 短縮した俳句もこの傾向の一つとして考えられるだろう。そして、街の所々で見られるミ
 ニュチュア模型、子どもが遊ぶ人形やドールハウスなどもこの小さいもの好きの象徴で
-ある。
-このように、日本人は小さいものに対して愛着のある民族である。しかし、こうなった
+ある。このように、日本人は小さいものに対して愛着のある民族である。しかし、こうなった
 理由については、明白な論文や証言がない。筆者個人の一見解だが、これは仏教思想に基
-づく繊細な精神が生んだ賜物
-たまもの
-といえるのではないだろうか。日本人は「無常」、すなわち
+づく繊細な精神が生んだ賜物たまものといえるのではないだろうか。日本人は「無常」、すなわち
 移り変わる自然に対し、はかなさと美しさを見出してきた。そして自然に対する感受性が
 鋭いが故に、その移り変わる一瞬の美しさを小さくして残そうとしたのではないだろうか。
 これはあくまで憶測にすぎないが、日本人の独特で神秘的な精神世界を考えると、あなが
-ち間違いでもないような気がする。
-56．この文章における日本の美意識とは何か。
+ち間違いでもないような気がする。 <br>
+56．この文章における日本の美意識とは何か。 <br>
 1 小さく繊細なものに美しさを感じるという感覚
 2 文学作品に自然の美しさを反映するという感覚
 3 巧妙な技術のみが美しいと考える感覚
 4 自然に対して愛着を持たなければならないと考える感覚
-57．賜物
-たまもの
-が指しているものは何か。
+57．賜物たまものが指しているものは何か。 <br>
 1 大自然を真似て小さくした箱庭や庭園のこと
 2 小さいものに対する感性や愛着のこと
 3 日本の家電メーカーが作った小さく改良された製品のこと
-4 繊細な精神世界のこと
-58．筆者の考えと合わないものはどれか。
+4 繊細な精神世界のこと <br>
+58．筆者の考えと合わないものはどれか。 <br>
 1 日本人は小さく繊細なものに愛着を感じる。
 2 すべてのものは移り変わるため、そのはかなく美しい一瞬を小さく保存し記念した。
 3 日本人には本来、小さいものに価値を見出す本能がある。
-4 日本人の精神世界は独特で神秘的である。
+4 日本人の精神世界は独特で神秘的である。 <br>
 
-67
- 
 問題 10 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 アスベスト（石綿いしわた）の健康被害に対する国の対策は、あまりに遅かった。
+から一つ選びなさい。  <br>
+アスベスト（石綿いしわた）の健康被害に対する国の対策は、あまりに遅かった。
 権限の不ふ行こう使しといえる。最高裁さいこうさいは判決で国やメーカーの賠ばい償しょう責任を認めた。
 元労働者たちの命あるうちに救済をすべきだ。耐たい火か性せいや耐たい熱ねつ性せいに優れたアスベストは、
 安価な断熱材として使われた。戦後の高度成長期に大量輸入され、約八割が建材に使用されたといわれる。
@@ -260,9 +227,7 @@
 十万円の療養手当が給付されるにとどまる。重い障害などに悩まされる被害者たちの要望
 とは隔へだたっているのが現状なのだ。与党のプロジェクトチームは、国が支払う和解金を
 一人最大千三百万円との案をまとめたが、全国規模の原告数は約千二百五十人。未み提てい訴その人も多い。
-被害者らが納得できる救済制度の早期創設がせめてもの国の務めだ。
-
-68
+被害者らが納得できる救済制度の早期創設がせめてもの国の務めだ。 <br>
  
 59．アスベストの説明として正しくないものはどれか。
 1 日本では 1974 年に使用が禁止された。
@@ -270,9 +235,7 @@
 3 戦後の高度成長期にたくさん使われた。
 4 WHO により発がん性が指摘された。
 60．最高裁の判決として正しいものはどれか。
-1 メーカー特定ができた場合のみ 賠償
-ばいしょう
-責任を認める。
+1 メーカー特定ができた場合のみ 賠償ばいしょう責任を認める。
 2 「一人親方」は「労働者」ではなく保護の対象ではない。
 3 アスベストの規制権限が遅れたことは責めなかった。
 4 国とメーカーの賠償責任を認め原告側が勝った。
@@ -287,11 +250,8 @@
 3 最高裁の国とメーカーに対する判決はおかしい。
 4 現在の被害救済制度の手当で充分である。
  
- 
-69
- 
 問題 11 次の A と B の文章を読んで、後の問いに対する答えとして最もよいものを、1・
-2・3・4 から一つ選びなさい。 
+2・3・4 から一つ選びなさい。  <br>
 ブラック校則 
 A 
 ブラック校則とは、常識的におかしい、理不尽な学校のルールを指し示す言葉だが、
@@ -309,23 +269,20 @@ B
 意味のあることだと考えている。しかし、校則とは教育学的に意味があるものでなけれ
 ばならず、理由もなく理不尽に学生に押し付けるべきものではないだろう。なぜその規
 則があるのか、それは本当に学生の将来に役立つものなのか、教育にかかわる全ての人
-に今一度考えてもらいたいものである。
+に今一度考えてもらいたいものである。 <br>
 63．ブラック校則に関して、A と B の意見として共通しているものはどれか。
 1 校則とは学生を縛るものなので、廃止されるべきだ。
 2 学生のためにならない校則を強要してはいけない。
 3 ブラック校則には規則を守ることを学ぶという教育上の意味が含まれている。
-4 教師は校則について、 もう一度考えるべきである。
-64．A と B どちらの文章でも触れられている点は何か。
+4 教師は校則について、 もう一度考えるべきである。 <br>
+64．A と B どちらの文章でも触れられている点は何か。 <br>
 1 ブラック校則とはすべての学校にある理不尽な校則の事である。
 2 ブラック校則には髪の色を強要する校則も含まれる。
 3 校則の中には、教育上意味のある校則もある。
 4 ブラック校則はメディアでたびたび取り上げられている。
- 
-
-70
- 
+  
 問題 12 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・ 4
-から一つ選びなさい。 
+から一つ選びなさい。  <br>
 月とその月光とが、古来詩人の心を強く捉とらえ、他の何物にもまして好こう個こ（注 1）の詩材
 とされたのは、その夜天の空に輝く灯火あかりが、人間の向火性を刺激し、本能的なリリシズム
 を詩情させたことは疑いない。西洋せいようの詩では、月と共に星が最も多く歌われているが、そ
@@ -354,51 +311,46 @@ B
 の住む月宮殿の連想を、荒涼たる没詩情のものに化したことなども、僕等の時代の詩人が、
 月へのエロスを失ったことの一理由であるかも知れない。しかしもっと本質的な原因は、
 近代における照明科学の進歩が、地上をあまりに明るくしすぎた為である。
-
-71
- 
+<br>
 （注 1）好個こうこ：適当なこと。ちょうどよいことか 
 （注 2）果敢は かない：かなえられることがない
 （注 3）培養ばいよう：育てること。人工的に生育・増殖させること
 （注 4）就 中なかんづく：その中でも特にとりわけ
-
+<br>
 65．筆者は月や星をどのような存在と言っているか。
 1 暗い夜には欠かせない存在 2 本能的なリリシズムを刺激する存在
-3 他の何ものにも代えがたい存在 4 向火によって勢いをおさえる存在
+3 他の何ものにも代えがたい存在 4 向火によって勢いをおさえる存在 <br>
 66．①「やんごとなき」の説明に当てはまるものはどれか。
 1 高貴な身分である 2 騎士道精神がある
-3 文化的である 4 知識人である
-67．②そうした失恋の動機に当てはまるものはどれか。
+3 文化的である 4 知識人である <br>
+67．②そうした失恋の動機に当てはまるものはどれか。 <br>
 1 山野を旅して恋人に会えなくなったこと
 2 月の歌ばかりを作って評価されなかったこと
 3 貴族の姫君の姿を見て満足していたこと
-4 身分違いのかなわぬ恋をしたこと
+4 身分違いのかなわぬ恋をしたこと <br>
 68．③近代の詩人は、月を忘れてしまったのだろうかとあるが原因として当てはまらない
-ものはどれか。
+ものはどれか。 <br>
 1 古くから数多く作られていて新鮮さがなくなってきたから。
 2 天文学の発達で神秘的な連想をしづらくなったから。
 3 フェミニズムやプラトニックな恋愛が増えてきたから。
 4 照明科学の進歩が地上を明るくしすぎているから。
- 
-72
- 
+<br>
+
 問題 13 右のページは、自治体の保育施設の案内である。下の問いに対する答えとして
-最もよいものを 1・2・3・4 から一つ選びなさい。 
+最もよいものを 1・2・3・4 から一つ選びなさい。  <br>
 69．佐藤さん夫婦が 5 歳の息子の一時預かり保育を利用するにあたって、保育施設の利用
-条件として正しいのはどれか。
+条件として正しいのはどれか。 <br>
 1 食物アレルギーのある子どもは預かってもらえない。
 2 一人っ子の子どもだけが預かってもらえる。
 3 16 時を越えては原則、預かってもらえない。
 4 利用者の状況は考慮されず全員が有料である。
 70．田中さんは小学生の息子の授業参観に出席するため、2 歳の双子の娘の一時預かりを
-3 時間依頼することにした。料金はいくらになるか。
+3 時間依頼することにした。料金はいくらになるか。 <br>
 1 3,100 円
 2 2,100 円
 3 2,200 円
 4 1,700 円
- 
-73
- 
+
 子育て中の皆さんを応援します! 一時預かり保育のお知らせ 
 もみじが丘市では公立の保育施設で一時預かり事業を行っています。保護者の方の急な病
 気や怪我、就職の準備、兄弟姉妹の学校行事の付き添い、冠婚葬祭
@@ -432,10 +384,7 @@ B
 ・予約は早めにお願いします。
 ・キャンセルする場合は、必ず前日までに電話連絡をしてください。
 お問い合わせ もみじが丘市子育て支援グループ 電話: 00-6666-1111
-
-74
- 
-</pre>
+</div>
     <p>
         <a  class="setting--a" href="index.html">home</a>
         <a  class="setting--a" href="testp4.html" target="_blank">link testp4</a>
