--- a/testp5.html
+++ b/testp5.html
@@ -7,10 +7,10 @@
     <title>tp5</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
-    <pre>
+<body>
+    <div  class="setting--page">
         問題 7 次の文章の読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br>
 極限環境に生える植物を研究している私は、砂漠のような乾燥地や高山などを訪ねて野
 外調査を行っている。木は（41）草さえ生えない砂漠は別として、スズメの涙ほどにしか
 草がない乾燥地の草原でも、野生動物を結構目にすることができる。このようなところで
@@ -32,43 +32,37 @@
 月以上も海抜 4 千メートルを超える高山で暮らした。東部ヒマラヤの大きな山塊では、見
 た目にはほとんど変化のないお花畑が、二日、三日と歩いてもとぎれる（45）続くことが
 ある。島国の日本では、想像することさえ難しいスケールの大きさである。
-
-104
- 
+<br> 
 41．
-１ まだしも ２ おろか ３ どころか ４ ごとき
+１ まだしも ２ おろか ３ どころか ４ ごとき<br> 
 42．
 １ 決して食べないわけではない
 ２ 決して食べないわけにもいかない
 ３ 食べるわけには決していかない
-４ 食べるわけでは決してない
+４ 食べるわけでは決してない<br> 
 43．
-１ にしろ ２ うえに ３ ゆえに ４ かぎり
+１ にしろ ２ うえに ３ ゆえに ４ かぎり<br> 
 44．
 １ a 家畜／b 餌 ２ a 餌／b 家畜
 ３ a 植物／b 餌 ４ a 餌／b 植物
 45．
-１ ことなく ２ わけなく ３ べくもなく ４ はずもなく
- 
- 
-105
- 
+１ ことなく ２ わけなく ３ べくもなく ４ はずもなく<br> 
+  
 問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br> 
 （1） 
 衝突することを恐れていたのでは、他人と親しくなることができない。人間はお互いに
 かなり親しくなっても、お互いを完全に理解できるものではない。理解しているつもりで
 も誤解していることはあろう。そして、衝突することを恐れていると、その誤解がとけな
 いまま関係が維持されることになる。相手のやることで何か不愉快なことがあった時、も
 し本気で親しくなろうとすれば、それをはっきりという方がいいだろう。相手は不愉快だ
-といわれてはじめて、なぜ自分はそれをしたか、ということが説明できる。
-46. 筆者がここで最も言いたいことは何か。
+といわれてはじめて、なぜ自分はそれをしたか、ということが説明できる。<br> 
+46. 筆者がここで最も言いたいことは何か。<br> 
 １ お互いの誤解を避けるために、距離をおいてつきあった方がいい。
 ２ 相手の人と親しくなるにはもっと相手のことを理解しようと努力するべきだ。
 ３ お互いの意見が違っていても素直に打ち明けることでよい関係が築ける。
 ４ 不愉快に感じることで誤解が生じるおそれがあるので、はっきり言わないと
- いけない。
- 
+ いけない。<br>  
 （2） 
 人間の潜在力を ON にするには、プラス発想や積極思考など前向きの精神状態や心の持
 ち方が大きく作用しているといいます。思いの力が私たちの可能性をおおいに広げてくれ
@@ -76,22 +70,19 @@
 （ ）、どれくらいのことが人間に可能なのか。人間の頭で、これをしたい、こうあっ
 てほしいと考えられるようなことは、遺伝子レベルでみれば、たいてい可能な範囲にある
 そうです。つまり、「思ったことはかなえられる」能力が、私たちの中には潜在している
-のです。
+のです。<br> 
 47．文の（ ）に入る最も適当なものはどれか。
 １ ちなみに ２ もっとも
-３ たとえば ４ すなわち
- 
-
-106
- 
+３ たとえば ４ すなわち<br> 
+  
 （3） 
 人生は短く、しかも一回限りである。ある人生を生きるということは、他の可能な生き
 方をすべて断念するということに他ならない。数学と音楽が好きな少年が数学者の道を歩
 き出す時、彼は音楽家になれば果たせたかもしれないすべての夢を失う。その悲しみは、
 たとえ彼が数学者としてどんなに輝かしい業績をあげたとしても決して癒されることはな
 いであろう。人が若い時をなつかしく感じるのは、失われた（ ）をいとおしく思うか
-らなのではないだろうか。
-48．文の（ ）に入る最も適当なものはどれか。
+らなのではないだろうか。<br> 
+48．文の（ ）に入る最も適当なものはどれか。<br> 
 １ 悲しみ ２ 成功
 ３ 可能性 ４ 青春
  
@@ -103,25 +94,22 @@
 ら、「これはもう仕方がない。ここまでできたのだからこれ以上進んで結果がうまくいか
 なくても、それは運命だ」と度胸を決めてしまう。そうした場合には、案外、困難だと思
 っていたことがスムーズにいって、むしろ非常によい結果を生む、ということにもなるの
-ではないかと思うのです。
-49．筆者がここで最も言いたいことは何か。
+ではないかと思うのです。<br> 
+49．筆者がここで最も言いたいことは何か。<br> 
 １ うまくいかない場合はひとりで迷うより、みんなの知恵を借りたほうがいい。
 ２ 人生においてしかたないとあきらめることもいい結果をもたらす場合がある。
 ３ 人生は心の持ちようで意外にうまくいく場合もある。
-４ 難しい問題に遭っても迷わず実践することが大事だ。
- 
- 107
- 
+４ 難しい問題に遭っても迷わず実践することが大事だ。<br> 
+  
 問題 9 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br> 
 （1） 
 いまの男性の主張はまだ自己表現とは思わない。やっと「表現とは」というスタートラ
 インに立ったところではないか。
 表現はコミュニケーションを目的とする。表現が求められるようになった最大の背景は、
 日本という共同体や家族的な社会という共同体が崩壊したことだろう。年功序列や終身雇
 用が大前提という共通の文化があれば意思疎通は簡単で、その規範に従っていれば目立つ
-必要もなかった。
-だが、（ ① ）が失われたいま、あらゆる人間関係で高度なコミュニケーション能力
+必要もなかった。だが、（ ① ）が失われたいま、あらゆる人間関係で高度なコミュニケーション能力
 が求められる。演劇でも、文化の異なる人が集まる欧州でも、意思疎通を目的とするワー
 クショップが盛んだ。共通の文化がないなかで、「いいことは黙っていても伝わる」と考
 えるのは、②残念ながら思い込みでしかない。
@@ -131,22 +119,20 @@
 しかし、内容は同じでも間の取り方や声の高さ、大きさなどで、うまい人と下手な人の
 差は明らか。落語がいい例だ。聞くほうも、内容より話し方や振る舞いといった方法論に
 説得されることがある。手法の重要性にやっと目が向き始めたということだろう。
-50．本文の（ ① ）に入る最も適当なものはどれか。
+50．本文の（ ① ）に入る最も適当なものはどれか。<br> 
 １ 自己表現 ２ 意思疎通 ３ 共通認識 ４ 自国文化
-51．②「残念ながら思い込みでしかない」とあるが、どういう意味か。
+51．②「残念ながら思い込みでしかない」とあるが、どういう意味か。<br> 
 １ 残念なことだが、単なる思い込みである ２ 残念だと思う必要はまったくない
 ３ 残念なことだが、誰もそう思わない ４ 残念だと思わなくもない
-52．筆者の考えに一番近いものはどれか。
+52．筆者の考えに一番近いものはどれか。<br> 
 １ コミュニケーションの能力はどんな時代においても大事にされている。
 ２ 日本は自己表現において、もっと方法論を重視すべきだ。
 ３ 日本社会は共同体が続いているため、意思疎通に大きな問題はない。
-４ 表現の内容が同じなら、話し方や振る舞いなどで影響されることはない。
- 
-108
- 
+４ 表現の内容が同じなら、話し方や振る舞いなどで影響されることはない。<br> 
+  
 （2） 
 人間には四種類ある。過去の思い出に生きる人、未来に生きる人、現在に生きる人、そ
-の他だ。
+の他だ。<br> 
 わたしは「あのときこう言い返せばよかった」とよく後悔するから過去に生きているの
 かとも思うが、過去の思い出にひたることはないし、「思い出づくり」にも興味がない。
 過去の栄光も意識に上らない（過去の栄光がないかもしれない）。第一、過去に目を向け
@@ -165,18 +151,16 @@
 からではない。たんに先のことが他人事としか思えないのだ。（中略）
 自分の未来は一日で十分だ。わたしは人生が何百年もあればいいのにと願っているが、
 人生のうち、（ ③ ）人生だと思っているのは今日一日と過去二日と未来一日の合計四
-日間だけだ。
-53．（ ① ）に入る最も適切な言葉はどれか。
+日間だけだ。<br> 
+53．（ ① ）に入る最も適切な言葉はどれか。<br> 
 １ むろん ２ しかし ３ すると ４ そうして
-54．②「万事、行き当たりばったりだ」とは、どういう意味か。
+54．②「万事、行き当たりばったりだ」とは、どういう意味か。<br> 
 １ 人生において後悔することはあっても、過去に目を向けることはない。
 ２ 人生においていろいろなことは他人事だと考え、楽観的に行動する。
 ３ 人生において先のことを深く考えずに状況に応じて適当に処理する。
 ４ 人生において周りに反対されても、自分で決断を信じて信念を曲げない。
-55．（ ③ ）に入る最も適切な言葉はどれか。
+55．（ ③ ）に入る最も適切な言葉はどれか。<br> 
 １ 後悔のない ２ 充実した ３ 自分の ４ 幸せな
-
-109
  
 （3） 
 妻の掃除と整理の仕方、これはもう極端に偏執的である。たとえば自分の好きなところ
@@ -190,26 +174,23 @@
 そんなことは容易にできることではない。次に、彼女の物の置き方、並べ方はことごとく
 彼女の抱いている美の法則によって支配されているので、実用上の便宜というものは
 （ ② ）どんな不便を忍んでも彼女は自分の美を守り通そうとする。③ときに私が抗議
-を申し込んでみてもとうていむだである。
-56．①「白紙にかえって探さねばならぬ」とあるが、どういう意味か。
+を申し込んでみてもとうていむだである。<br> 
+56．①「白紙にかえって探さねばならぬ」とあるが、どういう意味か。<br> 
 １ 新しい紙に書きながら探すこと。
 ２ 妻の考え方にそって探すこと。
 ３ 常識的な考えは捨てて探すこと。
 ４ 探すのは無理だと思いながら探すこと。
-57．（ ② ）に入る最も適切なものを一つ選びなさい。
+57．（ ② ）に入る最も適切なものを一つ選びなさい。<br> 
 １ 一切無視される ２ 一番大事にされる
 ３ 多少は考慮する ４ 必要不可欠である
-58.③「ときに私が抗議を申し込んでみてもとうていむだである」とあるが、それはどう
-してか。
+58.③「ときに私が抗議を申し込んでみてもとうていむだである」とあるが、それはどうしてか。<br> 
 １ 彼女は我慢強い人で、家の中のものをすぐ探すことができるから。
 ２ 彼女は神経質で、家のどこもきれいにしておかないと気がすまないから。
 ３ 彼女は自分の美意識を持っており、それを曲げようとしないから。
 ４ 彼女は考え方が普通の人と違うので、家のものは一瞬にして気がつくから。
-
-110
  
 問題 10 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br> 
 三匹の猫を飼っている。猫にはとにかく驚かされることばかりだ。こちらの精神状態が
 よければ彼らは限りなくリラックスし、外出が続いて忙しくてかまってあげられなくなっ
 たりすると、途端にグレてわるさをする。いらいらしている時は、わざと私の足を踏んづ
@@ -238,24 +219,21 @@
 私がもし「ライオンを知らない」といったら、多くの人がへんな顔をするだろう。いつ、
 どのように自分がライオンを認識するようになったのか、残念ながら記憶にない。おそら
 く最初は絵か写真で姿形を見せられ、実際に動物園で本物を見て認識に到達したのだと思
-う。つまり私は学習して情報を持つがゆえに、「ライオンを知っている」と錯覚してるだ
-けだ。
+う。つまり私は学習して情報を持つがゆえに、「ライオンを知っている」と錯覚してるだけだ。
 私はライオンを知らない。③イラクで毎日人が死んでいることも知らない。
 知っているのは、目の前で眠る猫たちが愛らしいということだけだ。
-
-111
  
 59．①「猫の立場に立って、そこから見える世界を想像してみると、自分が見ている世界
 のあやふやさがあぶり出されることがある」とあるが、筆者が言っている「自分が見てい
-る世界」とは、どういうことか。
+る世界」とは、どういうことか。<br> 
 １ 学習で得た知識などで、体験しなくても知っていると思う世界。
 ２ 情報や知識にすぎないことも、知っていると勘違いする世界。
 ３ 動物の知能よりはるかに発達した人間特有の想像の世界。
 ４ 自分の五感で体験した実感としての世界。
-60．（ ② ）に入る最も適当な言葉はどれか。
-１ 普通 ２ 奇妙 ３ 斬新 ４ 当然
+60．（ ② ）に入る最も適当な言葉はどれか。<br> 
+１ 普通 ２ 奇妙 ３ 斬新 ４ 当然<br> 
 61．③「イラクで毎日人が死んでいることも知らない」とあるが、筆者のどんな気持ちが
-表れているか。
+表れているか。<br> 
 １ ニュースや映像などの報道は事実と異なるところがあるので、簡単に信じて
  はいけないという筆者の思い。
 ２ 人間は現実主義で、国際的なニュースよりも自分の身近で起きる日々の暮ら
@@ -263,17 +241,15 @@
 ３ 事実は知っていても実際の体験がないわけで、簡単に知っているとはいえな
  いのだという筆者の思い。
 ４ 人間の目に見える世界は情報で得た知識で成り立つ場合が多く、それを克服
- するためにはもっと現場での体験を大事にすべきだという思い。
-62．本文の内容と合っているものはどれか。
+ するためにはもっと現場での体験を大事にすべきだという思い。<br> 
+62．本文の内容と合っているものはどれか。<br> 
 １ 猫に見える世界=猫が知らない世界。
 ２ 人間に見える世界=人間が知っている世界。
 ３ 猫に見える世界＃猫が知っている世界。
-４ 人間に見える世界＃人間が知っている世界。
- 
-112
- 
+４ 人間に見える世界＃人間が知っている世界。<br> 
+
 問題 11 次の A と B の記事を読んで、後の問いに対する答えとして最もよいものを、1・
-2・3・4 から一つ選びなさい。 
+2・3・4 から一つ選びなさい。 <br> 
 A 
 2009 年に全国の警察に被害届が出された振り込め詐欺は 7340 件、総額は約 95 億 7900
 万円で、いずれも前年のほぼ 3 分の 1 に減ったことが 21 日、警察庁のまとめで分かっ
@@ -283,7 +259,7 @@ A
 いる。同庁は粘り強く対策を続けるとしている。
 2009 年の被害件数は前年より 64.2%、被害総額は 65.3%減少。総額の半分強を占める
 「おれおれ詐欺｣の被害額も 66.5%減った。金融機関の職員らが顧客に声をかけて被害を
-防いだ事例は 1229 件に上った。
+防いだ事例は 1229 件に上った。<br> 
  
 B 
 昨年 1 年間に全国の警察に届けられた振り込め詐欺による被害額は前年比 180 億 1500
@@ -294,34 +270,29 @@ B
 の 21.5%から 77.2%に大幅に上昇した。
 手口別では、息子などをかたる｢オレオレ詐欺」が 52 億 200 万円で、前年の 155 億
 1900 万円から 66.5%減少、「税金の還付｣などとだまして現金自動預け払い機（ATM）を
-操作させる「還付金詐欺｣は 2 億 4000 万円で、前年の 47 億 4400 万円から 94.9%も減っ
-た。
+操作させる「還付金詐欺｣は 2 億 4000 万円で、前年の 47 億 4400 万円から 94.9%も減った。
 被害額は鹿児島を除く 46 都道府県で減少したが、都市部では依然として大きく、首都
 圏の 4 都県で全国の被害額の 47.8%を占めた。同庁は「今後は首都圏を中心に集中的な
-対策に切り替えたい｣としている。
- 
- 113
- 
-63．記事 B に比べて、記事 A で言っていないのはどれか。
+対策に切り替えたい｣としている。<br> 
+
+63．記事 B に比べて、記事 A で言っていないのはどれか。<br> 
 １ 昨年の振り込め詐欺の認知件数。
 ２ 昨年の振り込め詐欺の被害総額。
 ３ 昨年の振り込め詐欺の検挙率。
 ４ 昨年のおれおれ詐欺の被害額の減少率。
-64．記事の内容に合っていないものはどれか。
+64．記事の内容に合っていないものはどれか。<br> 
 １ 振り込め詐欺が減少したのは取り締まり強化と官民協力の結果だ。
 ２ 昨年は振り込め詐欺の認知件数も検挙件数も減少した。
 ３ 2008 年の振り込め詐欺の被害額は 250 億円を超えていた。
-４ 振り込め詐欺は首都圏に集中している。
-65．2008 年のおれおれ詐欺の被害金額はいくらか。
+４ 振り込め詐欺は首都圏に集中している。<br> 
+65．2008 年のおれおれ詐欺の被害金額はいくらか。<br> 
 １ 180 億 1500 万円
 ２ 155 億 1900 万円
 ３ 95 億 7900 万円
-４ 47 億 4400 万円
+４ 47 億 4400 万円<br> 
 
-114
- 
 問題 12 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br> 
 社会は個人から成り立つものとされている。したがって実情はどうあれ、それぞれの個
 人は社会の構造、運営、将来について責任を持つものとして意識し、行動していることに
 なっている。（ ① ）、このような意識は明治以降に輸入されたものであり、現実の日
@@ -351,24 +322,22 @@ B
 しかし、昨今は日本の国際化が国の内外で叫ばれだした。日本が国際社会の中で責任あ
 る一人前の地位を得たいと願うなら、仲間内にだけ通じるような世間原理にいつまでも頼
 っていてはならない。なぜなら、国際社会は顔見知りばかりではないからだ。考え方や価
-値観の異なる人たちとどう共存するかを、真剣に考えなくてはいけない。
-
-115
+値観の異なる人たちとどう共存するかを、真剣に考えなくてはいけない。<br> 
  
-66．（ ① ）に入る最も適当なものはどれか。
+66．（ ① ）に入る最も適当なものはどれか。<br> 
 １ すなわち ２ 要するに
 ３ だからといって ４ しかしながら
-67．②「世間の評判は気にかかるのである」とあるが、それはどうしてか。
+67．②「世間の評判は気にかかるのである」とあるが、それはどうしてか。<br> 
 １ 世間の中で個人は主体性に欠けて受動の姿勢でいるからである。
 ２ 個人が世間に対して批判や不満を述べることはできないからである。
 ３ 世間という定義が明確ではなく個人が責任を持って行動しないからである。
 ４ 世間の中での暮らしは楽なもので自分の位置と秩序を守るためである。
-68．③「それら」は何を指しているか。
+68．③「それら」は何を指しているか。<br> 
 １ 言葉の上での社会
 ２ 評論家や学者
 ３ 滑稽な行き違い
 ４ 人間関係のすべて
-69．本文の筆者の考えに最も近いものはどれか。
+69．本文の筆者の考えに最も近いものはどれか。<br> 
 １ 日本には言葉の上では「社会」は存在するが、実際は世間として機能してい
  る部分が多く世間原理の維持もやむをえないことだ。
 ２ 日本人は自覚のないまま世間の一人として生きているが、これからは個人の
@@ -378,17 +347,16 @@ B
  人が責任を持って行動する本当の「社会」に変わらなければならない。
 ４ 日本人は世間で暮らしていることに無自覚であり、国際化の視点から考えれ
  ば確かに社会原理は必要だが、赤の他人と暮らす不安や習慣通りにならない
- 暮らしにくさを考慮すると慎重に考えたほうがいい。
-116
- 
+ 暮らしにくさを考慮すると慎重に考えたほうがいい。<br> 
+
 問題 13 次は、ある取引先から届いたビジネス文書である。下の問いに対する答えとし
-て最もよいものを、1・2・3・4 から一つ選びなさい。 
+て最もよいものを、1・2・3・4 から一つ選びなさい。 <br> 
 70．取引先が、次回の打ち合わせで特に重要だと考えていることは何か。
 １ 現金取引に変更してもらうこと。
 ２ 新設備を安く提供すること。
 ３ 苦情に対する処理体制を報告すること。
 ４ 製品開発について話し合うこと。
-71．文書の内容にあっているものはどれか。
+71．文書の内容にあっているものはどれか。<br> 
 １ 「株式会社ジャパン電機」と「株式会社 ABC 設備機器」はこれから正式に取引
  きを行う予定である。
 ２ 「株式会社 ABC 設備機器」は、相手との取引きの増加、お支払条件の変更に応
@@ -396,9 +364,8 @@ B
 ３ 「株式会社 ABC 設備機器」は、これから新設備を安く発売することが可能にな
  った。
 ４ 「株式会社ジャパン電機」は、次の定例会で新商品の発表を行い、取引きにつ
- いて具体策を考えている。
-
-    </pre>
+ いて具体策を考えている。<br> 
+</div>
     <p>
         <a  class="setting--a" href="index.html">home</a>
         <a  class="setting--a" href="testp6.html" target="_blank">link testp6</a>
