--- a/testp8.html
+++ b/testp8.html
@@ -7,46 +7,41 @@
     <title>tp8</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
-    <pre>
-        問題 7 次の文章を読んで、文章全体の趣旨を踏まえて、（41）から（44）の中に入る最
-もよいものを、1・2・3・4 から一つ選びなさい。 
+<body >
+    <div class="setting--page" >
+     問題 7 次の文章を読んで、文章全体の趣旨を踏まえて、（41）から（44）の中に入る最
+もよいものを、1・2・3・4 から一つ選びなさい。 <br>
 現在は、平和で豊かな時代となり、仕事を強要されることがなくなってしまいまし
 た。そのような現代（41）、懸命に働くことをせず、怠惰に生きることが、人生に何
 をもたらすのかということを、改めて真剣に考えるべきです。
 たとえば、あなたが宝くじにあたって、一生、遊んで暮らせるだけの大金が手に入っ
 たとしましょう。しかし、その幸運が本当の幸福をもたらしてくれる（42）、必ず気
-づくはずです。
-目標もなく、働くこともせず毎日遊んで暮らせる。そのような自堕落
-じだらく
-な生活を長年
-続ければ、人間として成長することもできない（43）、きっと人間としての性根を腐
+づくはずです。目標もなく、働くこともせず毎日遊んで暮らせる。そのような自堕落
+じだらくな生活を長年続ければ、人間として成長することもできない（43）、
+きっと人間としての性根を腐
 らせてしまうことでしょう。そうすれば、家族や友人などとの人間関係にも悪い影響
 を与えることでしょうし、人生で生きがいややりがいを見つけることも難しくなると
-思います。
-安楽が心地よいのは、その前提として、労働がある（44）。毎日、一生懸命に働
+思います。安楽が心地よいのは、その前提として、労働がある（44）。毎日、一生懸命に働
 き、その努力が報われるからこそ、人生の時間がより楽しく貴重に感じられるので
-す。
-懸命に働いていると、その先に密やかな喜びや楽しみが潜んでいる。ちょうど長い夜
+す。懸命に働いていると、その先に密やかな喜びや楽しみが潜んでいる。ちょうど長い夜
 が終わり、夜明けのときが訪れる（45）、喜びや幸福が苦労の向こうから姿を現して
-くる、それが、労働を通じた人生の姿というものなのです。
+くる、それが、労働を通じた人生の姿というものなのです。<br>
  
 41．
-１ について ２ につれて ３ において ４ にかけて
+１ について ２ につれて ３ において ４ にかけて<br>
 42．
 １ はずだということに ２ ものではないことに
-３ べきだということに ４ のみではないことに
+３ べきだということに ４ のみではないことに<br>
 43．
-１ かぎりで ２ しまつで ３ までもなく ４ どころか
+１ かぎりで ２ しまつで ３ までもなく ４ どころか<br>
 44．
 １ からにほかならない ２ にすぎない
 ３ にきまっている ４ からしかたがない
 45．
-１ ように ２ ものを ３ ことで ４ ために
-
+１ ように ２ ものを ３ ことで ４ ために<br>
  
 問題 8 次の（1）から（4）の文章を読んで、後の問いに対する答えとして最もよいもの
-を、1・2・3・4 から一つ選びなさい。 
+を、1・2・3・4 から一つ選びなさい。 <br>
 （1） 
 世の「名人」と呼ばれる、それぞれの分野の頂点を極めた達人たちも、おそらくそのよ
 うな 道程みちのりをたどったにちがいありません。労働とは、経済的価値を生み出すのみならず、
@@ -54,8 +49,8 @@
 何も俗世ぞくせを離れなくても、仕事の現場が一番の精神修養の場であり、働くこと自体がすな
 わち修行なのです。日々の仕事にしっかり励むことによって、 高邁こうまいな人格とともに、
 すばらしい人生を手に入れることができるということを、ぜひ心にとめていただきたいと思
-います。
-46．（ ）に入るものとして、適当なものはどれか。
+います。<br>
+46．（ ）に入るものとして、適当なものはどれか。<br>
 １ たとえ
 ２ それに
 ３ とはいえ
@@ -68,26 +63,26 @@
 ほうを見ている。そして、とても満足そうな顔をしているのだ。
 彼らは人間といっしょにというか、人間の近くにいたいのである。だからぼくらが留守
 中のネコの世話を近所の知り合いに頼んで二日ばかり旅行に出かけようとしていると、非
-常に不安そうな様子になる。ぼくらの気配で何か察知しているとしか思えないのである。
-47．筆者が考えるネコとはどのような動物か。
+常に不安そうな様子になる。ぼくらの気配で何か察知しているとしか思えないのである。<br>
+47．筆者が考えるネコとはどのような動物か。<br>
 １ 寄っては来ないが、飼い主の家族と一緒にいることで満足する動物である。
 ２ 人と一緒にいることに幸せを感じ、飼い主の命令に従う動物である。
 ３ 家族のいうことを理解することができる、とても頭のいい動物である。
-４ イヌほど命令に従わず、何を考えているかわからない飼いにくい動物である。
+４ イヌほど命令に従わず、何を考えているかわからない飼いにくい動物である。<br>
  
-（3） 
+（3） <br>
 「出口にエサを置いた迷路」にネズミを放すと、ネズミは試行錯誤を繰り返しながら、
-最後にエサに到達します。
+最後にエサに到達します。<br>
 そのネズミを再び同じ迷路に入れると、今度は前よりは試行錯誤の回数が少なくなり、
 短時間で出口にたどり着きます。こうした実験を何度か重ねるうちに、ネズミは脇道に入
 り込んだり、逆戻りすることなく、たちどころにエサのある出口に到達できるようになり
 ます。ただ、もし迷路にエサがなかったら、このような学習記憶は当然起こりません。エサが
-食べられる喜び、快感がネズミの脳を活性化し、学習能力を高めるのです。
-48．この文章で筆者が一番言いたいことはどれか。
+食べられる喜び、快感がネズミの脳を活性化し、学習能力を高めるのです。<br>
+48．この文章で筆者が一番言いたいことはどれか。<br>
 １ ネズミも人間と同じように、迷路遊びができる。
 ２ ネズミは試行錯誤を経て、迷路の道順を覚えることができる。
 ３ ネズミはエサを与えられると、脳が活性化し学習能力が上がる。
-４ ネズミは、動機付けを与えることによって、学習記憶を呼び起こすことができる。
+４ ネズミは、動機付けを与えることによって、学習記憶を呼び起こすことができる。<br>
 （4） 
 世の中には、「なんでこんな男がモテるんだ？」と思えることはしばしばある。だが逆
 に、「なぜ、この男が嫌われるのだろう？」と疑問に思うようなことは少ないのだ。つま
@@ -95,14 +90,14 @@
 われるようなタイプの男は、会社でもあまり好かれないと考えたほうがいい。異性の見方
 というのは、一般に同性の見方よりもずっと厳しいものだ。だから、異性に嫌われない話
 し方ができれば、まず同性に嫌われることはないと言っていい。
-49．文章の内容と合っているものはどれか。
+49．文章の内容と合っているものはどれか。<br>
 １ 女性に持てるようなタイプの男性は、会社でも好かれるタイプである。
 ２ 異性に嫌われない人は、同性にも好まれると推測できる。
 ３ 一般的には、異性の見方は同性よりずっと厳しい。
-４ 同性に嫌われるような人は、異性にも嫌われると推測できる。
+４ 同性に嫌われるような人は、異性にも嫌われると推測できる。<br>
    
 問題 9 次の（1）から（3）の文章を読んで、後の問いに対する答えとして最もよいもの
-を、1・2・3・4 から一つ選びなさい。 
+を、1・2・3・4 から一つ選びなさい。 <br>
 （1） 
 モノを大切にしながらすっきり暮らすには、買う量を減らすことです。
 「品質がいいのに 随分ずいぶんお買い得だわ」というように、シーズン末期のバーゲンセール
@@ -118,23 +113,23 @@
 高価なブランド品のお得意さんとして有名ですが、あまりにも多くの人が持っていますし、
 自分のセンスに自信がなくてブランド物に頼っているようで、本当におしゃれな人や品格
 のある人は持ちません。自分の生活や必要に合わないモノは、②どんなに質がよくて、価
-値があってももてあまします。
+値があってももてあまします。<br>
  
-50．( ① )に入れる言葉として正しいのはどれか。
+50．( ① )に入れる言葉として正しいのはどれか。<br>
 １ 安い値段で購入してよかったと思います。
 ２ かえって浪費したことになります。
 ３ 二、三回着たらすぐ品質の問題で捨ててしまいます。
 ４ うれしく思っているわけです。
-51．②どんなに質がよくて、価値があってももてあましますとあるが、ここではどういう意味か。
+51．②どんなに質がよくて、価値があってももてあましますとあるが、ここではどういう意味か。<br>
 １ いくら値段が高くても、手に入れようと努力する。
 ２ どんなにいいものでも、自分に合わないものは、持っていても意味がない。
 ３ 高価なブランドでも、自分の能力を超えたものに、人は魅力を感じる。
-４ 価値があるものでも、自分の好みではないものは、他人に譲ゆずったほうがいい。
-52．筆者がここで最も言いたいことはどれか。
+４ 価値があるものでも、自分の好みではないものは、他人に譲ゆずったほうがいい。<br>
+52．筆者がここで最も言いたいことはどれか。<br>
 １ バーゲンセールの品物はだいたい品質に問題があるので、安くても買わない ほうがいい。
 ２ 高価なブランドばかり買う女性は個性がない上に、センスが悪いと思われる かもしれない。
 ３ 自分の生活に必要なものや自分に合うもの以外は買わないほうがいい。
-４ 品質のある生活を送るためには、素朴そぼくで質素な暮らしをしたほうがいい。
+４ 品質のある生活を送るためには、素朴そぼくで質素な暮らしをしたほうがいい。<br>
  
  
 （2） 
@@ -146,24 +141,22 @@
 ようになるか。辛い苦しい思いをしないで自分の仕事として進めるためには、どんなやり
 方がいいのか。それをよく考え、工夫することが大切だ。不満ばかりを言っていても何も
 解決しない。それは現状を改善する能力がないだけの話である。
-タクシードライバーを思い浮
-う
-かべてほしい。A 地点から B 地点へ行くのに、もし一本の
+タクシードライバーを思い浮うかべてほしい。A 地点から B 地点へ行くのに、もし一本の
 道しか知らなかったとすればどうなるか。その道が混んだり、事故で渋滞したらもう打つ
 手はない。「まいったな。渋滞か」と文句を言うことしかできまい。しかし、日頃から心
 がけていれば、そのタクシードライバーは可能な限り渋滞を回避することができるだろう。
 ②仕事の進め方もまったく同じといえよう。指示された一つのやり方しか知らなければ、
 それでうまく行かなかったらもう終わりになる。自分なりの工夫で、仕事の小さな道を見
 つけておく。いくつかのやり方を常に用意しておく。そうすれば、問題が生じても壁を乗
-り越えていける。
+り越えていける。<br>
 53．①だから仕事を面白くするのもしないのも、結局自分次第であるとあるが、この説明
-として合っているのはどれか。
+として合っているのはどれか。<br>
 １ 辛い思いをしながら仕事をやることを通して、自己実現を遂げることができる。
 ２ 仕事に対する姿勢によって、仕事が面白くなったり、つまらなくなったりする。
 ３ 仕事が大変だと思っている人はなかなか成長しない。
 ４ やらされているという感覚で仕事をやる人は長続きできない。
 54．②仕事の進め方もまったく同じといえようとあるが、「仕事の進め方」は何と同じな
-のか。
+のか。<br>
 １ 事故で渋滞して前に進むことができない車
 ２ 渋滞について文句を言うこと
 ３ 運転中、一本の道しか知らないこと
@@ -172,7 +165,7 @@
 １ 仕事においては、日頃からの積み重ねが肝心だ。
 ２ 仕事がたいへんだと文句ばかりこぼす人は、問題を解決できない。
 ３ 仕事は自分が主体となって積極的に進めることが大切だ。
-４ 仕事でつまずいた時には、自分なりの工夫で近道を見つけるべきだ。
+４ 仕事でつまずいた時には、自分なりの工夫で近道を見つけるべきだ。<br>
  
 （3） 
 最近の脳科学の説によると、記憶力が年を取って落ちるという証拠はあまりない。逆に、
@@ -187,25 +180,25 @@
 とした習慣、それが年を取ってからの「頭のよさ」に大きな違いを与えている。
 たとえば「勉強」の習慣として「復習」というものがある。予習して授業に臨み、その
 後、復習する。勉強をする以上、学んだことを頭に残さないといけないが、そのためにい
-ちばん有効なことは、じつは「復習」するということだ。
-56．( ① )に入れるものとして正しいのはどれか。
+ちばん有効なことは、じつは「復習」するということだ。<br>
+56．( ① )に入れるものとして正しいのはどれか。<br>
 １ 科学的に証明されていないでもない。
 ２ 科学的に証明されているわけではない。
 ３ 科学的に証拠がないとも限らない。
-４ 科学的に証拠があるともいえよう。
-57．②その差は、どこから来るのだろうかの説明について、正しいのはどれか。
+４ 科学的に証拠があるともいえよう。<br>
+57．②その差は、どこから来るのだろうかの説明について、正しいのはどれか。<br>
 １ 生活の習慣の違いによる差で、記憶力に差が出てくる。
 ２ 生まれつきの能力の差によって、記憶力にも差が出てくる。
 ３ 頭のよさや年齢の違いによって、能力にも差が出てくる。
-４ 記憶力のよさによって、能力にも差が出てくる。
-58．文章の内容と合っているものはどれか。
+４ 記憶力のよさによって、能力にも差が出てくる。<br>
+58．文章の内容と合っているものはどれか。<br>
 １ 年を取って記憶力が下がるのは仕方のないことだ。
 ２ 復習によってはじめて知識を身につけられる。
 ３ 物覚えが悪いのはもっぱら生活習慣によるものだ。
-４ 記憶力が年を取ることによって落ちるという証拠はない。
+４ 記憶力が年を取ることによって落ちるという証拠はない。<br>
   
 問題 10 次の文章を読んで、後の問い対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br>
 人間は自分で何とか自分の性格や生き方を変えたいと思うときがある。あるいは、他人
 の行動を変えたい、あるいは、変わってほしいと思うこともある。ところが、これはなか
 なか難しいことだ。①それが思うようになるのだったら、誰もが立派な人になったり、偉
@@ -236,34 +229,34 @@
 冷たくすることはない。実はこのときに生じた変化によって経験したことは、その人が次
 に自分の在り方と照合しつつ、あらたな方向性を見出してゆくための参考になることが多
 いので、それはそれとして大切にすべきなのである。ただ、そのときの喜び方が手離しに
-なってしまわないところが一味違うのである。
+なってしまわないところが一味違うのである。<br>
 
 （注 1）風見鶏かざみどり：定見を持たず、大勢の動向にすぐ順応する。（注 2）生半可
-なまはんか：不十分で中途半端である。
-59．①それが思うようになったらとあるが、「それ」とは何か。
+なまはんか：不十分で中途半端である。<br>
+59．①それが思うようになったらとあるが、「それ」とは何か。<br>
 １ 自分の性格や生き方を変えること
 ２ 他人の行動を変えること
 ３ 他人が自分の思うとおりになること
 ４ 思うとおりに自分や他人を変えたりすること
-60．② 180 度の変化が生じるとあるが、その説明について、文章の内容とあっているものはどれか。
+60．② 180 度の変化が生じるとあるが、その説明について、文章の内容とあっているものはどれか。<br>
 １ 180 度の変化はだいたいすぐ逆転するので、冷たい目で見たほうがいい。
 ２ 180 度の変化はあまり信用できないが、変わらないよりましなので、喜ぶべ きだ。
 ３ 180 度の変化をしようと思ってもなかなかできない、それより変わらないほう がいい。
 ４ 20、30 度の変化より、180 度の変化はより難しいので、絶えず努力する必要 がある。
-61．( ③ )に入れるものとして正しいのはどれか。
+61．( ③ )に入れるものとして正しいのはどれか。<br>
 １ どうせ信用できないから
 ２ 好ましいことではなく
 ３ やたらに喜ぶことなく
 ４ あまり評価せずに
-62．文章の内容と合っているものはどれか。
+62．文章の内容と合っているものはどれか。<br>
 １ 他人を変えるのは難しいが、自分を変えるのは簡単だ。
 ２ 自分の欠点を直してはじめて成功を遂げられる。
 ３ 他人の変化に敏感に反応するより、じっくり見守ってあげるのが大切だ。
-４ 親と違う生き方をしようという決心が強いほど、失敗で終わるケースが多い。
+４ 親と違う生き方をしようという決心が強いほど、失敗で終わるケースが多い。<br>
  
   
 問題 11 次の A と B の文章を読んで、後の問いに対する答えとして最もよいものを、1・
-2・3・4 から一つ選びなさい。 
+2・3・4 から一つ選びなさい。 <br>
 A 
  小学校においては、説明、記録など「言語活動」を学ぶ内容が目立った。2 年で
 は、文章に線を引いて書きだす。身ぶり手ぶりを使って説明する、といった動きが盛
@@ -287,29 +280,28 @@ B
 の編集者は「今の時代、やっておかなければならない学習だ」と話す。
 こうした記述を、現場の教師は比較的冷静に受け止める。神奈川県内の女性小学校
 教諭（30）は「電子マネーで買い物する小学生は珍しくない。子供たちの生活は教科
-書の想定よりずっと進んでいる」と指摘する。
+書の想定よりずっと進んでいる」と指摘する。<br>
 
  
-63．二つの記事に共通して言っていることは何か。
+63．二つの記事に共通して言っていることは何か。<br>
 １ 小学校における「言語教育」の変容
 ２ 小学校における教科書の現状
 ３ 小学校教育における新指導綱要の内容
 ４ 小学生の漢字力が高まっていること
-64．A と B の記事の記述と合っている内容はどれか。
+64．A と B の記事の記述と合っている内容はどれか。<br>
 １ 小学校では生徒に動作で教科書の内容を表現させようとする動きが盛んだ。
 ２ 今の小学校の教科書は基礎知識よりインターネットの使用など実用性の高い
  技能を重視する傾向にある。
 ３ 今の教科書は時代の変化を反映した内容も多いが、伝統的な言語文化の教育
  も大事にしている。
 ４ 新しい教科書は子どもたちの生活実態を反映したものだ。
-65．小学校におけるネットの利用について述べた内容として、正しいのはどれか。
+65．小学校におけるネットの利用について述べた内容として、正しいのはどれか。<br>
 １ 小学生のネットの利用方法は新しい教科書の中に含まれていない内容だ。
 ２ 現場の教師は子どもたちのネット利用に伴う学力低下を心配している。
 ３ コンピューターでのローマ字入力の学習は、漢字の勉強に役に立つ。
-４ 文部科学省は小学生の積極的なネット利用を推奨している。
- 
+４ 文部科学省は小学生の積極的なネット利用を推奨している。<br> 
  問題 12 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br>
 「多重人格」は今アメリカで患者数数十万という①とんでもない「流行病」である。こ
 れを「幼児期の 虐待ぎゃくたい」によって説明するのが今の「定説」である。療法は、抑圧されて
 幼児記憶を再生させて、否定された自己を 蘇よみがえらせ、多重化した人格を統合することを
@@ -344,33 +336,32 @@ B
 いまの社会では、「 ③ 」、「自分の個性を全面的に表現せよ」といった「自我を断
 片化して使い分ける」ことに対するきびしい禁忌きんきが幼児期から働いている。そのような社
 会では、「ある局面においての私」と「別の局面での私」というものを切り離す能力は育
-たない。
+たない。<br>
 66．①とんでもない「流行病」であるとあるが、ここで筆者のどういう気持ちを示すため
-に使われているのか。
+に使われているのか。<br>
 １ 「多重人格」という新しい病気が流行するアメリカの発展に対する賞賛
 ２ 「多重人格」が幼児に特有な症状であるということへの強調
 ３ 「多重人格」は近いうちに日本でも流行するだろうという懸念
-４ 「多重人格」の患者数がこれだけ多いというのはおかしいと皮肉る気持ち
-67．「 A 」と「 B 」に入れるのに最適な言葉はどれか。
+４ 「多重人格」の患者数がこれだけ多いというのはおかしいと皮肉る気持ち<br>
+67．「 A 」と「 B 」に入れるのに最適な言葉はどれか。<br>
 １ A：巧言令色 B：半信半疑
 ２ A：付和雷同 B：朝令暮改
 ３ A：融通無碍 B：面従腹背
-４ A：当意即妙 B：軽挙妄動
-68．②支配的なイデオロギーとあるが、その意味として最適なものはどれか。
+４ A：当意即妙 B：軽挙妄動<br>
+68．②支配的なイデオロギーとあるが、その意味として最適なものはどれか。<br>
 １ その時代の人々の判断をただひとつの方向に強制する思想
 ２ その時代のほとんどの人に認められている手本
 ３ その時代の大多数の人々の思考や行動に影響を与える根本的な考え方
-４ その時代の人なら誰もが認めて受け入れる常識的なもの
-69．「 ③ 」入れる言葉として、もっとも適切なのはどれか。
+４ その時代の人なら誰もが認めて受け入れる常識的なもの<br>
+69．「 ③ 」入れる言葉として、もっとも適切なのはどれか。<br>
 １ 自分らしくふるまえ ２ まじめに努力せよ
-３ 嘘をつくな ４ 立場をわきまえよう
+３ 嘘をつくな ４ 立場をわきまえよう<br>
  
 問題 13 次はある大学で留学生が応募できる奨学金のリストである。下の問いに対する
-答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。
+答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。<br>
 70．李さんは中国のある師範大学の教育学部の 3 年生である。10 月に交換留学生として日
-本教育大学に留学することになった。李さんが応募できる奨学金はどれか。
-１ 私費外国人留学生学習 奨励費
-しょうれいひ
+本教育大学に留学することになった。李さんが応募できる奨学金はどれか。<br>
+１ 私費外国人留学生学習 奨励費しょうれいひ
 ２ 三木武夫国際育英基金
 ３ 財団法人平和中島財団奨学金
 ４ 国内採用による国費留学生（研究留学生）
@@ -379,9 +370,8 @@ B
 １ 日本学生支援機構のホームページで申し込みを出す
 ２ 国際交流チームに相談したうえで、申し込みを出す
 ３ 指導教官に相談して、指導教官を通じて応募する
-４ 筆記試験と面接試験を受けなければならない
+４ 筆記試験と面接試験を受けなければならない<br>
 
- 
 奨学金 Scholarship
 私費留学生に対する奨学金のうち、日本教育大学を通じて応募することのできる奨学
 金には次のものがあります。奨学金の採用選考は学内での選考基準に基づいて行われ
@@ -395,8 +385,7 @@ B
 会奨学金学部 月 100,000 円大学部 月 140,000 円財団法人平和中島財団奨学金 学部 月 100,000 円
 大学部 月 120,000 円10 月頃 国内採用による国費留学生（研究留学生）博士 月 155,000 円修士 月 154,000 円
 非正規生 月 152,000 円11 月～12 月頃 日本教育大学私費外国人留学生奨学金年 60,000 円（程度）
-
-    </pre>
+</div>
     <p>
         <a class="setting--a"  href="index.html">home</a>
         <a class="setting--a"  href="testp9.html" target="_blank">link testp9</a>
