--- a/testp9.html
+++ b/testp9.html
@@ -7,10 +7,10 @@
     <title>tp9</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
-    <pre>
-        問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+<body>
+   <div  class="setting--page">
+ 問題 7 次の文章を読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
+ら一つ選びなさい。 <br>
 50代以上の結婚経験者に「離婚を考えたことは」と尋ねると、「ある」の回答は、女性
 は 6 割、男性 3 割。差は歴然です。
 東北地方の 60 代女性は娘が中学で不登校になったとき、夫に自分の育て方を（41）ご
@@ -25,39 +25,39 @@
 し、健康の不安も抱えていて、「とても離婚できる経済状況ではありません」。
 埼玉県川越市の女性（55）は「お互いに嫌な思いもいっぱいしたし、我慢もしたけど、
 とりあえずいろいろあった問題は片付き、子供も自立した。お互いに年を取ったからいま
-さら離婚（45）、波風立てず、このまま助け合って老後を生きようと･･･」。
+さら離婚（45）、波風立てず、このまま助け合って老後を生きようと･･･」。 <br>
 41．
-１ 頭 ２ 耳 ３ 腹 ４ 肩
+１ 頭 ２ 耳 ３ 腹 ４ 肩 <br>
 42．
-１ きっぱり ２ ことごとく ３ ずうずうしく ４ じっくり
+１ きっぱり ２ ことごとく ３ ずうずうしく ４ じっくり <br>
 43．
-１ 影 ２ 壁 ３ 床 ４ 天井
+１ 影 ２ 壁 ３ 床 ４ 天井 <br>
 44．
-１ 尽かして ２ 尽きて ３ 尽くして ４ 尽かされ
+１ 尽かして ２ 尽きて ３ 尽くして ４ 尽かされ 
 45．
 １ といって ２ ならば ３ でもないし ４ だという
 
 問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。  <br>
 (1) 
 生物材料の神秘性について、洋服屋さんから面白い話を聞いた。英国の服地は世界一だ
 というが、その秘密は羊から刈り取った毛を、半年余りねかせておくところにあるという。
 その間に毛は縮んで自然の形になる。それを紡いだ糸で織ると、形崩れのしない布地がで
 きる。布地を織る技術だけでいえば、日本も英国に負けないが、毛をねかせておく期間が
-とれないために、やはり本場物にはかなわないというのである。
-46．日本の布地が本場物にはかなわないのはなぜか。
+とれないために、やはり本場物にはかなわないというのである。 <br>
+46．日本の布地が本場物にはかなわないのはなぜか。 <br>
 １ 羊のねる時間が十分とれないから。
 ２ 布地を織る技術が低いから。
 ３ 羊の毛を十分ねかせていないから。
-４ 日本の羊の毛は縮みにくいから。
-(2) 
+４ 日本の羊の毛は縮みにくいから。 <br>
+(2)  <br>
 これから働く上で、即戦力でなければ生きていけないとか、専門性を持ったプロフェッ
 ショナル人材でなければ生き残れないというのは、はっきり言えば幻想である。地に足の
 着いた経営をしている企業では、若者にそんな大それたことなど期待していない。トヨタ
 自動車のある人事担当者は、新卒の人材として求められているのは、昔も今も変わらない
 という。それは即戦力などではけっしてなく、結局のところ「化けそうな人材」なのだと。
-化けそうな人材が仕事のなかで本当に化けていくことによって会社は成長していける。
-47．筆者の言う化けそうな人材とはどんな人材か。
+化けそうな人材が仕事のなかで本当に化けていくことによって会社は成長していける。 <br>
+47．筆者の言う化けそうな人材とはどんな人材か。 <br>
 １ 本当は専門性を持っているのに、入社のときにはそれを隠しているような人材。
 ２ その人がいることによって会社が大きく成長していくことができるような人材。
 ３ 今すぐには役に立たないが、経験を積むことで優れた能力を発揮しそうな人材。
@@ -71,8 +71,8 @@
 てそこまでするの？」と不思議そうな顔をされたこともあった。その人の話をよく聞くと、
 「そうやって納得のいかない会社につとめるなんて、自分にウソをつくことじゃないか」
 という言い分だった。さらに、「その人、自分の理想をあきらめて妥協した、ってことで
-すね」とまで言われてしまった。たしかにその方が「あきらめ」だと言えなくもない。
-48．筆者は、今の若者はあきらめが早いという定説についてどう考えているか。
+すね」とまで言われてしまった。たしかにその方が「あきらめ」だと言えなくもない。 <br>
+48．筆者は、今の若者はあきらめが早いという定説についてどう考えているか。 <br>
 １ 経験の少ない若者はもともとあきらめが早いものなのだから、今の若者だけがあき
 らめが早いというわけではない。
 ２ 今の若者はウソをつくぐらいならあきらめたほうがいいという価値観を持っている
@@ -81,39 +81,32 @@
 てあきらめが早いように見える。
 ４ 昔の若者と今の若者では何をあきらめるかが違うので、あきらめが早いとは簡単に
 は決められない。
- 
-(4) 
+ (4) 
 一昨年他界した米国の気象学者エドワード・ローレンツ氏は「カオス理論」の父と呼ば
-れる。
-カオスとは混沌
-こんとん
-（注 1）。何でも、初期条件の小さな差異が後々巨大で予測不能な変化
+れる。カオスとは混沌こんとん（注 1）。何でも、初期条件の小さな差異が後々巨大で予測不能な変化
 につながるという理論で、気象の数理モデルから発見したという。その論文『予測可能性
 一ブラジル（注 2）でチョウが羽ばたくとテキサス（注 3）で滝巻が起きるか』から「バ
 タフライ効果」として知られている。
 難しいことは分からないが、そういうことも起こり得る、というたとえ話だろう。氏が
 籍を置いた米大学のサイトにある評伝の表現が分かりやすいように思う。曰く（注 4）、
-「なぜ天気予報がそれほど困難なことなのかの説明に挑んだ」と。
-（注1） 混沌：何もかもが無秩序で複雑ばこと
+「なぜ天気予報がそれほど困難なことなのかの説明に挑んだ」と。 <br>
+（注1） 混沌：何もかもが無秩序で複雑ばこと <br>
 （注2） ブラジル：南アメリカにある国
 （注3） テキサス：アメリカの州のひとつ
-（注4） 曰く：言うことには
-49．この文章で説明されたこの理論によると、正確な天気予報は可能か。
+（注4） 曰く：言うことには <br>
+49．この文章で説明されたこの理論によると、正確な天気予報は可能か。 <br>
 １ 理論でのみ可能である。
 ２ 少し難しいが可能である。
 ３ ふつうは可能である。
-４ ほとんど不可能である。
+４ ほとんど不可能である。 <br>
  
 問題 9 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。  <br>
 （1） 
-スパイス（注 1）を使う上での最大の奥義
-おうぎ
-（注 2）が、その配合の妙にあると考えてい
+スパイス（注 1）を使う上での最大の奥義おうぎ（注 2）が、その配合の妙にあると考えてい
 る人はあまりに多い。プロの料理人の間でもその傾向は強いが、ハッキリ言って①それは
-間違いである。
-千葉県船橋市にあるインド料理店サールナートのオーナーシェフ（注 3）である小松崎
-祐一氏に興味深い話を聞いたことがある。
+間違いである。千葉県船橋市にあるインド料理店サールナートのオーナーシェフ
+（注 3）である小松崎祐一氏に興味深い話を聞いたことがある。
 彼はよく取材で「秘伝のスパイスの調合方法」をたずねられるが、「スパイスの配合
 なんて②いくらでも教えてあげますよ」と答えるのだという。
 「でも、ボクと同じカレーは作れない。ポイントはそこじゃないんです」スパイスの配
@@ -123,14 +116,13 @@
 分は水より熱した油によって引き出されやすい。そのため、そうすることで風味として人
 間の舌に反応させる。
 水と油。どうしても反発してしまいそうなこの 2 つの物質を乳化させることがスパイス
-の特徴を効率よく引き出す方法なのだ。
+の特徴を効率よく引き出す方法なのだ。 <br>
 （注1） スパイス：香辛料
 （注2） 奥義：特別の技術や秘密
 （注3） オーナーシェフ：自分のレストランを所有する料理人
-（注4） すべ：方法
+（注4） すべ：方法 <br>
 
- 
-50．①それは何を指しているか。
+50．①それは何を指しているか。 <br>
 １ プロの料理人がスパイスの配合を重視すること。
 ２ スパイスを変な割合で配合して料理に使うこと。
 ３ スパイスの使い方の秘密は配合にあること。
@@ -139,14 +131,12 @@
 １ スパイスの配合が同じでも自分ほどおいしいカレーは作れないから。
 ２ スパイスの配合はカレーのおいしさにはほとんど関係がないから。
 ３ カレーはそれぞれの料理人の個性を反映しておいしくなるものだから。
-４ 自分のようにおいしいカレーを作る人がもっと増えてほしいから。
-52．③乳化はなぜ必要なのか。
+４ 自分のようにおいしいカレーを作る人がもっと増えてほしいから。 <br>
+52．③乳化はなぜ必要なのか。 <br>
 １ 油にスパイスの成分を移しても、水と融合させなければ香りが引き出せないから。
 ２ スパイスの香りが移った油を水に融合させなければおいしいと感じられないから。
 ３ 水と油が乳化したものでなければ、スパイスの香りを引き出すことができないから。
-４ スパイスを含んだ油は水と融合させなければ、人間の口に入れることができない
- から。
- 
+４ スパイスを含んだ油は水と融合させなければ、人間の口に入れることができないから。
  
 (2) 
 今年の年賀状に偶然、ウオーキングについてふれたものが 2 通あった。「昨年ウオーキ
@@ -172,9 +162,9 @@
 （注1） エクササイズ：運動
 （注2） にっちもさっちも行かなくなった：どうにもならなくなった
 （注3） 原動力：もとになる力
-（注4） エールを送る：応援する
+（注4） エールを送る：応援する <br>
 
-53．①ここのところとはどんなところか。
+53．①ここのところとはどんなところか。 <br>
 １ 移動の手段として歩行を使いたくないから文明を発達させたのに、結局、歩行をし
 なければならないというところ。
 ２ 歩行はもともと移動という日的を達成するための手段であったのに、今では歩行自
@@ -182,13 +172,13 @@
 ３ 健康のために歩行以外の移動の手段を生みだしたのに、そのせいでかえって身体が
 弱ってしまったというところ。
 ４ 人類は長い間怠惰な暮らしを続けてきたのに、現代になってからわざわざ運動しな
-ければならないというところ。
-54．②続けることがむずかしいのはなぜか。
+ければならないというところ。 <br>
+54．②続けることがむずかしいのはなぜか。 <br>
 １ 文明に反する行為だから。
 ２ 歩行は手段にすぎないから。
 ３ 人間は怠惰なものだから。
 ４ 動機を高める要因が少ないから。
-55．筆者が③やっぱり偉いとほめるのはなぜか。
+55．筆者が③やっぱり偉いとほめるのはなぜか。 <br>
 １ 文明に反する怠惰な習慣を克服しただけでなく、自己愛の原理で文明を発達させる
  ために力を尽くしているから。
 ２ 技術を発展させるだけでなく、強い自己愛で自分を高めるという二つの原理で文明
@@ -196,9 +186,8 @@
 ３ 反文明的なことを続けるのは自己愛からだが、結局、自己愛もまた文明を発達させ
  る別の原動力になっているから。
 ４ 強い自己愛を捨てて難しいことを続けているだけでなく、文明を発達させる大切な
- 原動力になっているから。
- 
- 
+ 原動力になっているから。 <br>
+
 (3) 
 自然界の不思議さは原始人類にとっても、二十世紀の科学者にとっても同じくらいに不
 思議である。その不思議を、昔われらの先祖が化
@@ -237,24 +226,20 @@
 ４ 見たことがないものの存在を仮定して、それで現象を説明しようとすること。
  
 問題 10 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。  <br>
 接続詞というのは、なかなか、①やっかいな品詞です。第二言語の場合はもちろん、母
 語習得でも難しい部類に入ります。接続詞は、幼児期の言語習得でもっとも遅く習得され
 る品詞の一つとされていますし、小学生の作文でも、「そして」や「それから」のような、
 一つか二つの決まった接続詞しか使えないために単調で読みにくくなっている文章をしば
 しば目にします。
 日本語学習者の作文を読んでいても、接続詞は、日本語教師が手を入れたくなるところ
-の上位に入るでしょう。とくに、上級・ 超 級
-ちょうきゅう
-（注 1）学習者の作文で誤りが目につきま
+の上位に入るでしょう。とくに、上級・ 超 級ちょうきゅう（注 1）学習者の作文で誤りが目につきま
 す。これは、もちろん、上級・超級学習者だけが接続詞を間違えるということではありま
 せん。初級・中級学習者の作文では、助詞をはじめとする他の文法的な誤りが多く、相対
 的に接続詞の誤りが目立ちにくいこと。また、初級・中級学習者は難しい接続癌を避ける
 ためにかえって間違わないことなどの理由があるのでしょう。
 日本語教師だからといって、接続詞に自信があるわけではありません。不自然な接続詞
-を添削
-てんさく
-（注 2）し、学習者に返却したところ、②「なぜこの接続詞でないといけないので
+を添削てんさく（注 2）し、学習者に返却したところ、②「なぜこの接続詞でないといけないので
 すか」と言われ、絶句することもしばしばです。学習者の指摘どおり、よく考えたらその
 接続詞でも大丈夫な気がしてくるときもありますし、どうしてもダメだという場合でも、
 その理由をきちんと説明することは困難です。
@@ -268,38 +253,37 @@
 この質問には、日本人学生は 3～5 割、留学生は 2～4 割と答えることが多いようです。
 現実には 1～3 割ですから、いずれも③それを上回っているのですが、留学生のほうが正
 解に近いことがわかります。外国語として見ているほうが正確に対象化できるのでしょう。
-
  
 私が調べた範囲で接続詞の頻度がもっとも高いのは、①講義（36.9%）、つぎは②論文
 （25.5%）です。以下、③エッセイ（13.3%）、④新聞の社説（12.2%）、⑤小説（10.4%）、
 ⑥新聞のコラム（7.9%）、⑦ドラマのシナリオ（3.0%）の順になります。極端に多い独話
 の講義、極端に少ない対話のシナリオは別として、書き言葉ではせいぜい 10%前後、もっ
 とも多い論文でも全体の 4 分の 1 にしか接続詞はつきません。接続詞のこうした実態を知
-っておくことは、作文指導のさいの教師の武器となるでしょう。
+っておくことは、作文指導のさいの教師の武器となるでしょう。 <br>
 （注1） 超級：上級よりもさらに上のレベル
-（注2） 添削：人の文章を直すこと
-59．①やっかいな品詞であるのは誰にとってだ、と筆者は考えているか。
+（注2） 添削：人の文章を直すこと <br>
+59．①やっかいな品詞であるのは誰にとってだ、と筆者は考えているか。 <br>
 １ 外国語として日本語を学習する人。
 ２ 幼児や小学生。
 ３ 日本語教師。
-４ 日本語を使うすべての人。
+４ 日本語を使うすべての人。 <br>
 60．②「なぜこの接続詞でないといけないのですか」と言われ、絶句することもしばしば
-なのはなぜか。
+なのはなぜか。 <br>
 １ 反論されることに慣れしていないから。
 ２ 自信を持って言ったことが伝わらないから。
 ３ 専門家の意見であっても学習者が納得しないから。
 ４ 教師自身も絶対の白信があるわけではないから。
-61．③それとは何か。
+61．③それとは何か。 <br>
 １ 実際の割合 ２ 日本人学生の答え
 ３ 留学生の答え ４ 日本人学生の答えと留学生の答えを足したもの
-62．筆者は接続詞についてどのように考えているか。
+62．筆者は接続詞についてどのように考えているか。 <br>
 １ 現在でもすでに研究が進んでおり、多くの人が関心を持っている。
 ２ 母語話者には習得は困難ではない が、外国人には非常に習得が困難である。
 ３ 専門家であれば、その使用のルールについて明確に言葉にできなければならない。
-４ 現在のところ研究が進んでいるとは言えないが、 今後研究が充実すると予想される。
+４ 現在のところ研究が進んでいるとは言えないが、 今後研究が充実すると予想される。 <br>
  
 問題 11 次の A と B はそれぞそれ別の新聞のコラムである。A と B の両方を読んで、後の
-問いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。 
+問いに対する答えとして、最もよいものを 1・2・3・4 から一つ選びなさい。  <br>
 A 
 高速道路というのは、何のためにあるのだろうか。全国どこへでもより早く、便利に行
 けるようになることで、都市にも地方にも豊かさをもたらす。そういう存在であるべきだ。
@@ -308,7 +292,7 @@ A
 人口が集中する。交通の便がよくなることで地方が活性化し、このアンバランスが解消さ
 れれば、都市に集中していた人口が地方に分散し、日本全体の発展が期待できる。
 もちろん高速道路の無料化だけでこれら全てが実現するわけではない。しかし、地方の
-活性化のための第一歩になるものだと思う。
+活性化のための第一歩になるものだと思う。 <br>
 B 
 最近、高速道路を無料化しろという議論をよく目にするが、ここでちょっと考えて 
 みたい。
@@ -318,30 +302,27 @@ B
 大した違いはないと思うかもしれない。ちょっと早く出ればいいのだと。しかし、大量の
 輸送を必要とする企業にとっては人件費、ガソリン代などの増大が、高速道路料金を上回
 るという試算もある。
-金を出さずに時間をかけるか、金を出しても速さを求めるか。選択肢を残してほしい
-ものだ。
+金を出さずに時間をかけるか、金を出しても速さを求めるか。選択肢を残してほしいものだ。
 
- 
 63．高速道路の無料化によって起こると予想されることで、A と B の両方が触れている内
-容はどれか。
+容はどれか。 <br>
 １ 交通量の変化。
 ２ 輸送経費の変化。
 ３ 経済への影響。
-４ 地方への影響。
-64．高速道路の無料化について、A の筆者と B の筆者はどのような立場をとっているか。
+４ 地方への影響。 <br>
+64．高速道路の無料化について、A の筆者と B の筆者はどのような立場をとっているか。 <br>
 １ A は賛成だが、B は批判的である。
 ２ A は賛成だが、B は態度を明確にしていない。
 ３ A も B も態度を明確にしていない。
-４ A は態度を明確にしていないが、B は批判的である。
-65．A の穫者と B の筆者は、それぞれ何を重視しているか。
+４ A は態度を明確にしていないが、B は批判的である。 <br>
+65．A の穫者と B の筆者は、それぞれ何を重視しているか。 <br>
 １ A は地方に住む人のことを、B は都市に住む人のことを重視している。
 ２ A は若者の利益を、B は企業の利益を重視している。
 ３ A は料金が一律になることを、B は複数の選択肢があることを重視している。
-４ A は往来が容易になることを、B は高速で移動できることを重視している。
+４ A は往来が容易になることを、B は高速で移動できることを重視している。 <br>
  
-  
 問題 12 次の文章を読んで、後の問いに対する答えとして、最もよいものを 1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。  <br>
 高速化した現在においては、様々な情報が入り、移動も高速化されたことにより、①潜
 在的に実現可能な事柄の数は増えたに違いない。やりたいことの中には、「どうしても実
 現したい」というものもあれば、「やらないよりはやったほうがまし」というレベルの事
@@ -360,26 +341,25 @@ B
 その数がどんどん増えていくと、本当になすべき仕事にかけたい時間も削られることにな
 ってしまう。③結果として、組織としての生産性は低下する。誰にとっても時間は有限で
 あること。どんなに簡単な作業も一定の時間を必要とすることを考慮し、作業の優先順位
-に従って、効率的に時間という資源を使用することを心がけることが望ましい。
+に従って、効率的に時間という資源を使用することを心がけることが望ましい。 <br>
 
  
-66．①潜在的に実現可能な事柄の数は増えたとはどのような意味か。
+66．①潜在的に実現可能な事柄の数は増えたとはどのような意味か。 <br>
 １ 移動が高速化したことで仕事の可能性が広がり、欲望だけが大きくなっている。
 ２ 情報が増え、手段が多様化したことでできればやりたいと感じることが増えている。
 ３ まだ実現できるとは限らないのに、情報が増えたことで答望が刺激されている。
 ４ これからの技術革新でますます可能性が増し、やりたいことが増えていく。
-67．②やりたいことができないという感覚が強くなっているのはなぜか。
+67．②やりたいことができないという感覚が強くなっているのはなぜか。 <br>
 １ できる事柄が多くなったのに、一つーつに時間をかけることを要求されるから。
 ２ 人間は一つのことをやり遂げるのに必要な時間を短縮することができないから。
 ３ 技術革新や学習によって時間を生み出すこつがうまく習得できないから。
-４ やりたいという欲望が増えたのに、それに当てられる時間は増えないから。
-68．③結果として、組織としての生産性は低下するとあるが、それはなぜか。
+４ やりたいという欲望が増えたのに、それに当てられる時間は増えないから。 <br>
+68．③結果として、組織としての生産性は低下するとあるが、それはなぜか。 <br>
 １「やったほうがまし」な仕事のほうが簡単で、皆がそういう仕事を優先させるから。
 ２「やったほうがまし」な仕事が増えた結果、本当に必要な仕事ができなくなるから。
 ３「やらなけらばならないこと」の重要性がそのほかの仕事のせいで見えなくなるから。
-４「やらなければならないこと」ばかりが増えて、どれも完成させることができなく
- なるから。
-69．この文章で筆者が言いたいことは何か。
+４「やらなければならないこと」ばかりが増えて、どれも完成させることができなく なるから。
+69．この文章で筆者が言いたいことは何か。 <br>
 １ 現代人に大切なのは、与えられた時間の中でいかに効率よく優先順位の高い仕事を
  実現していくかを心がけることである。
 ２ 現代人に大切なのは、与えられた様々な手段と可能性を使って、できる限り多くの
@@ -387,21 +367,20 @@ B
 ３ 現代人は、やりたいこととやるべきことを明確に区別し、限られた時間の中で生産
  性を上げる方法を常に探すべきである。
 ４ 現代人は、技術革新と経験を積み重ねることで無駄な単純作業をなくし、なすべき
- ことの実現を目指すべきである。
+ ことの実現を目指すべきである。 <br>
  
 問題 13 次は薬局で出された薬の説明書である。下の問いに対する答えとして、最もよ
-いものを 1・2・3・4 から一つ選びなさい。 
+いものを 1・2・3・4 から一つ選びなさい。  <br>
 70．田中さんは朝食後に最低何種類の薬を飲まなければならないか。
 １ 2 種類 ２ 3 種類 ３ 4 種類 ４ 5 種類
 71．田中さんは 2 日間薬を飲んだ結果、のどの痛みが治まった。熱は今日 38.5 度ある。
-何種類の薬をやめることができるか。
-１ 1 種類 ２ 2 種類 ３ 3 種類 ４ 4 種類
-田中太郎さんのお薬 
+何種類の薬をやめることができるか。 <br>
+１ 1 種類 ２ 2 種類 ３ 3 種類 ４ 4 種類田中太郎さんのお薬 
 ●あなたのお薬の働きや使用法を説明したものです。
 ●注意事項をよく読んで、正しく使用してください。乳幼児の手の届かないところに保管
 してください。
 ●※印のものは、症状がなくなったら使用をやめることができます。
-形状 使用法 薬の働き 注意事項
+形状 使用法 薬の働き 注意事項 <br>
 ※オレンジのカプセル飲み薬
 １回１カプセル
 １日２回まで
@@ -431,10 +410,8 @@ B
 6 オレンジの粉薬 飲み薬 1 回 1 包
 1 日 2 回朝・夕食後
 胃の働きを助ける・水またはぬるい湯で飲む
-・室温で保管
-
-
-    </pre>
+・室温で保管 <br>
+</div>
     <p>
         <a class="setting--a"  href="index.html">home</a>
         <a class="setting--a"  href="testp10.html" target="_blank">link testp10</a>
