--- a/testp7.html
+++ b/testp7.html
@@ -7,9 +7,9 @@
     <title>tp7</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="setting--page">
-    <pre>
-        問題 7 次の文章の読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
+<body >
+<div class="setting--page">
+問題 7 次の文章の読んで、（41）から（45）の中に入る最もよいものを、1・2・3・4 か
 ら一つ選びなさい。 
 気温や湿度、風速などの気象データから作り出されたユニークな指数が、続々と生
 み出されている。各会社はそれぞれ知恵をしぼり、その独自性でお客を（41）らし
@@ -17,36 +17,32 @@
 濯していいかどうか、外出には帽子をかぶったり日焼け止めをつけたりしたほうがい
 いかなどの判断の助けになる。
 変わったところでは「やりがい指数」というのがある。これは、気温 20 度前後で
-微風
-びふう
-という状態のときに集中力が高まる（42）平均風速や最高気温などのデータを分
+微風びふうという状態のときに集中力が高まる（42）平均風速や最高気温などのデータを分
 析して、仕事に集中できるかどうかを 100 点満点で表したものだ。他にも「忘れ物指
 数」というのがあって、湿度や気温の上昇で不快になれば注意力が散漫になるので、
 忘れ物をしやすくなる。忘れ物をしやすいかどうかは 3 段階で表され、この指数で注
-意を（43）ことができる。
-さらには健康関係の指数、たとえば「リウマチ＊指数」のようなものも編み出され
+意を（43）ことができる。さらには健康関係の指数、
+たとえば「リウマチ＊指数」のようなものも編み出され
 た。これはリウマチ患者約 100 人のデータ（44）、前の日との気温・湿度差と痛みの
 強さとの関係に着目して作られたもので、他のいろいろな病気の指数化も進んでいる
 ようだ。このような気象データから考え出された指数は、以前は直接天候に影響を受
 ける企業などがよく利用していたが、販売会社のほうでは、身近な生活情報に加工す
 ることで個人客（45）買ってもらおうと工夫を凝らしているようだ。
-＊リウマチ：風湿
-41．
+＊リウマチ：風湿<br>
+41．<br>
 １ つかみたいとしている ２ つかもうとしている
 ３ つかみたくてもつかみようがない ４ つかまなければならない
-42.
+42.<br>
 １ ことから ２ ことに ３ ことだから ４ ことで
 43．
 １ あつめる ２ まかなう ３ またがる ４ うながす
 44．
 １ のもとで ２ にそくして ３ をもとに ４ にはんして
 45．
-１ のも ２ でも ３ をも ４ にも
+１ のも ２ でも ３ をも ４ にも<br>
 
-150
- 
 問題 8 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br>
 （1） 
 生命を延ばすことに心を奪われるのではなくて、病者に死が訪れるまでにまだ少し時間
 のある 間あいだに、その人になにか本当のいのちをあたえるようなことができないか、という
@@ -54,16 +50,14 @@
 になる光栄を感じとり、仕つかえるような思いで臨死りんしの患者と共にあるべきではないだろうか。その思いが
 あれば、どんなに忙しく働いても、そして疲れて倒れても、本望ほんもう
 ではないだろうか。46．「そして疲れて倒れても、本望ではないだろうか」とあるが、その説明について正し
-いのはどれか。
+いのはどれか。<br>
 １ 臨死の患者のために仕えるのは自分の本当の願いではない。
 ２ 死が訪れる前のほんの少しの時間に忙しく働くのは患者の本当の望みではない。
 ３ 患者とともに彼らの最期を迎えるのは光栄だと思う気持ちがあれば、いくら
  彼らに仕えるとしてもそれで満足できる。
 ４ 生命を延ばすために忙しく働くより、患者の本当の気持ちを聞いてあげるの
- が自分の本当の願いだ。
- 
-151
- 
+ が自分の本当の願いだ。<br>
+
 （2） 
 女子高校生や女子大学生は、すぐ仲よしグループをつくります。一緒にお弁当を食べた
 り、おしゃべりをしたり、買い物に行ったり。仲間は青春を楽しむ必需品という趣さえあ
@@ -71,7 +65,7 @@
 り、仲間の意見を尊重し、仲間のルールを守ろうとします。時には仲間はずれにならない
 ために万引きをしたり、いじめをしたりします。仲間の中に自分の居場所があれば安心感
 が得られますが、居場所がなくなると一人ではとても不安でやっていけないのでしょう。
-47．この文章で筆者が一番言いたいことはどれか。
+47．この文章で筆者が一番言いたいことはどれか。<br>
 １ 女性高校生は青春を楽しむためによくグループをつくって、一緒に行動する。
 ２ 青春時代の学生にとっては、学校の先生や親よりも、仲間がもっと重要なの
  である。
@@ -79,9 +73,7 @@
 ４ 青春時代の学生は仲間を気にし、仲間はずれされないように仲間に同調する
  嫌いがある。
 （3） 
-マニュアル通りのサービスは単に義務を 遂行
-すいこう
-しているだけであって、サービス精神と
+マニュアル通りのサービスは単に義務を 遂行すいこうしているだけであって、サービス精神と
 はほど遠いものでしょう。「私はあなたのことを忘れていません。いつもあなたのことを
 考えていますよ」この気持ちを相手に伝えることがサービスの原点なのです。お客様に伝
 わらないサービスは価値ゼロと言っていい。それではお客様からお金をもらえないし、給
@@ -92,31 +84,24 @@
 １ マニュアル以上に、丁寧な言葉遣いを使って、礼儀正しく行動すること。
 ２ いつも相手の気持ちを考え、相手の本当の需要に応えること。
 ３ できれば店内の雰囲気を明るくし、お客さんを喜ばせること。
-４ 「いつもあなたのことを考えていますよ」とお客様にちゃんと言うこと。
-
-152
+４ 「いつもあなたのことを考えていますよ」とお客様にちゃんと言うこと。<br>
  
 （4） 
-ゾウはなぜ巨大なのか。それは大きな 図体
-ずうたい
-で捕食者を圧倒しようとしているからだ。
+ゾウはなぜ巨大なのか。それは大きな 図体ずうたいで捕食者を圧倒しようとしているからだ。
 あれだけ巨大ならばトラもライオンも歯が立たない。ネズミはなんであんなに小さいのか。
 小さければ捕食者の目につきにくいし、小さな穴やものかげにすばやく隠れることもでき
 る。ゾウやネズミは勝手に大きかったり小さかったりしているわけではない。（中略）し
 かしゾウにしてみれば、大きいから皆ハッピー、というものでもなく、できれば「普通の
 動物」に戻りたいのであろう。ネズミにしたってそうだ。だからこそ、大陸の動物は捕食
-者の少ない島におかれると、大きい物は小さく、小さいものは大きくなるのだ。
-49．文章の内容と合っているものはどれか。
-１ ネズミやウサギのような小型のものの場合、島のものは大陸より、体が小さ
- くなる。
+者の少ない島におかれると、大きい物は小さく、小さいものは大きくなるのだ。<br>
+49．文章の内容と合っているものはどれか。<br>
+１ ネズミやウサギのような小型のものの場合、島のものは大陸より、体が小さ くなる。
 ２ ゾウのような大型のものの場合、島のほうが大陸よりずっと大きい。
 ３ 捕食者が少なくなると、動物は普通のサイズに戻る。
-４ ゾウやネズミは必要に応じて大きかったり小さかったりする。
- 
-153
- 
+４ ゾウやネズミは必要に応じて大きかったり小さかったりする。<br>
+
 問題 9 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4 か
-ら一つ選びなさい。 
+ら一つ選びなさい。 <br>
 （1） 
 私たちは、さまざまな方法で生活の中にしきりを作ってきた。その中でも「私」と他人
 とのしきりは、多様な方法で行われている。家族の中でも、それぞれが自分の衣服を持ち、
@@ -132,30 +117,25 @@
 ことで、わたしとそれ以外のものの間に境界線（しきり）をつくることになる。そうなっ
 てくると、結局、わたしとは一体あるのかどうかという問いがそこにかかわってくる。
 50．①「『これはわたしのものだ』という感覚と分かちがたい」とあるが、その説明に
-ついて、正しいのはどれか。
+ついて、正しいのはどれか。<br>
 １ 私用のものとは「これはわたしのものだ」とは違う。
 ２ 私用のものとは「これはわたしのものだ」とほぼ変わりがない。
 ３ 「これはわたしのものだ」は私用のものと分けて考えたほうがいい。
-４ 「これはわたしのものだ」という感覚から私用のものが生まれる
-51．（ ② ）に入れる言葉として正しいのはどれか。
+４ 「これはわたしのものだ」という感覚から私用のものが生まれる<br>
+51．（ ② ）に入れる言葉として正しいのはどれか。<br>
 １ ところが ２ いわば ３ つまり ４ それゆえ
-52．この文章で筆者が最も言いたいことはどれか。
+52．この文章で筆者が最も言いたいことはどれか。<br>
 １ 現代人は家族生活をよりよく改善するために、さまざまなしきりを作っている。
 ２ 私たちは私用のものをめぐって、個人的にはさまざまなしきりを作っている。
 ３ 現代人は自分専用のものを持っているが、その中に自分があるかどうか分からない。
-４ 私たちは自分の存在自体を考えずに、さまざまなしきりを作っている。
+４ 私たちは自分の存在自体を考えずに、さまざまなしきりを作っている。<br>
 
-154
- 
 （2） 
 誰しも、なにかをやりたいなとか、やってみたいなとか思うことがあるが、なかなかそ
-れができない、ということがあるものだ。
-「…がやってみたい。しかし…」というわけで、なにか 留保
-りゅうほ
-条件がつき、①その条件
-について考え込んだり、それを解決してから、などと思っているうちに、日が経ってしま
-ったり、意欲が薄れたりしてしまう。あるいは、ずっとそのように思いながら死を迎えて
-しまうということもある。
+れができない、ということがあるものだ。「…がやってみたい。しかし…」というわけで、
+なにか 留保りゅうほ条件がつき、①その条件について考え込んだり、それを解決してから、
+などと思っているうちに、日が経ってしまったり、意欲が薄れたりしてしまう。あるいは、
+ずっとそのように思いながら死を迎えてしまうということもある。
 やりたいことはやればいいじゃないか、といえばまったくそのとおりなのだが、そこで
 「しかし」という条件が心の中に生じてきて、②のびのびになるところに、人間というも
 のの在り方がよく示されていると思われる。
@@ -166,29 +146,25 @@
 こんなときは、やりたい麻雀を辛抱して、しなければならない仕事にかかるが、後から
 考えてみると、そのときの能率はきわめて悪いものである。（中略）
 このようなときは、やりたいと思った麻雀をやってしまうほうが能率的なことがある。
-
-155
- 
-53. ①「その条件」とあるが、具体的に何を指すのか。
+<br> 
+53. ①「その条件」とあるが、具体的に何を指すのか。<br>
 １ やりたいことをする前にやらなければならないこと。
 ２ まかされた仕事を引き受ける前に自分の要求などを含む留保条件。
 ３ 自分の願いをかなえるために、解決しなければならない難問。
-４ 夢や理想を実現するために、犠牲しなければならないこと。
+４ 夢や理想を実現するために、犠牲しなければならないこと。<br>
 54．②「のびのびになるところに、人間というものの在り方がよく示されていると思われ
-る」とあるが、その説明について、正しいのはどれか。
+る」とあるが、その説明について、正しいのはどれか。<br>
 １ ゆったりと自分のやりたいことをやるのが、もっとも人間らしい生き方である。
 ２ やりたいことがなかなか実現できないで延ばされるのが人間の本当の生き方である。
 ３ のんびり計画を立てながら夢を見るのは、人間の理想的な生き方である。
 ４ 忙しい仕事の合間を利用して、のびのびと自分のやりたいことをするのは有
- 意義な生き方である。
-55．この文章で筆者が最もいいたいことはどれか。
+ 意義な生き方である。<br>
+55．この文章で筆者が最もいいたいことはどれか。<br>
 １ やりたいことはなかなか実現できないので、もっと現実に目を向けるべきだ。
 ２ やりたいことはすぐやらないと、時間が立つにつれてその意欲がだんだん薄
  れていく。
 ３ 計画を立てるのは時間の無駄だから、やりたいことを今すぐやったほうがいい。
 ４ やりたいことは我慢するより、行動に移したほうがかえって能率が高くなる。
- 
-156
  
 （3） 
 好きな仕事、好きなことをすればいい、というと必ず「今の仕事が本当にすきかどうか
@@ -200,45 +176,34 @@
 「自分がこの仕事を好きだというのは思い込みかもしれない」とか「彼女を好きなのは
 幻想かもしれない」などと、疑い出したらきりがないのが世の中だ。哲学を批判するわけ
 ではないが、あらゆることに懐疑精神を持って哲学的になるのは、はっきり言って私は勧
-めない。
-彼女がいて、ラブラブな状態にある。でもひょっとしたらこいつは、打算
-ださん
-で俺と付き合
-っているんじゃないかとか、実は 二股
-ふたまた
-かけているんじゃないかとか、いろいろなことを
-疑い出しても、（ ② ）。
-（中略）
+めない。彼女がいて、ラブラブな状態にある。でもひょっとしたらこいつは、打算
+ださんで俺と付き合っているんじゃないかとか、実は 二股ふたまたかけているんじゃないかとか、
+いろいろなことを疑い出しても、（ ② ）。（中略）
 「人生に対する疑い」のようなものは、誰もが思春期に経験するものだが、その態度を
 ずっと引きずることはかっこいいでも何でもなく、自分にとってマイナスにしかならない。
 根拠のない思い込みをしない、意味のない疑いを持たないということを「習慣づける」
-のは上手に生きるコツの一つだ。
+のは上手に生きるコツの一つだ。<br>
 
-157
- 
-56. ①「こういう態度」とあるが、ここでは何を指すのか。
+56. ①「こういう態度」とあるが、ここでは何を指すのか。<br>
 １ 自分の仕事が本当にすきかどうか、わからないという態度。
 ２ 人間関係がうまく行っているのかどうか、わからないという態度。
 ３ 今付き合っている人を本当にすきかどうか、わからないという態度。
-４ 自分の人間関係や仕事に対して疑いを持っている態度。
-57. （ ② ）に入る最も適当なものはどれか。
+４ 自分の人間関係や仕事に対して疑いを持っている態度。<br>
+57. （ ② ）に入る最も適当なものはどれか。<br>
 １ 証拠がないので、どうしようもない。
 ２ それは理解できる。
 ３ 疑ったからといって得することはほとんどない。
-４ 疑いようがなく、かえって不愉快なことになる。
-58．この文章で筆者が一番言いたいことはどれか。
+４ 疑いようがなく、かえって不愉快なことになる。<br>
+58．この文章で筆者が一番言いたいことはどれか。<br>
 １ 人間関係に懐疑精神を持つのはいいことではない。
 ２ 根拠のない、意味のない疑いは持たないほうがいい。
 ３ あらゆることに懐疑精神を持つのは哲学的な考え方なのだ。
-４ 人生に「疑いを持つ」のは自分にとってマイナスにしかならない。
-  
-158
+４ 人生に「疑いを持つ」のは自分にとってマイナスにしかならない。<br>
  
 問題 10 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
-最近は女性がとても強くなりました。
-あらゆる分野で女性の活躍が目立ち、どちらかというと男性が、そのパワーに圧倒され
-ているようです。家庭でも昔のように亭主関白は希少価値になり、たいていは妻が主導権
+から一つ選びなさい。 <br>
+最近は女性がとても強くなりました。あらゆる分野で女性の活躍が目立ち、どちらかというと男性が、
+そのパワーに圧倒されているようです。家庭でも昔のように亭主関白は希少価値になり、たいていは妻が主導権
 をがっちり握っています。実は、脳の構造からして、女性のほうが男性より「たくましく
 生きられる」ようになっているのです。
 ①人間の大脳は、ご存じのように右脳と左脳に分かれています。ちょうど左右の手で拳こぶし
@@ -262,8 +227,6 @@
 って楽しく食事する「幸せな家庭」のイメージがありますから、夜遅く帰宅するなどとい
 うのはとんでもないことなのです。
 
-159
- 
  結婚して二十年もたつのに、そういう「幸せな家庭」のイメージを持ちつづけているの
 ですから、すばらしいプラス思考、 強靭きょうじんなイメージ力です。そのイメージ力が功
 こうを奏そうし、このごろは私も早く帰って家族団かぞくだんらんを楽しむ気持ちになりました。
@@ -272,22 +235,18 @@
 一方、男性のほうは分析的、論理的に思考しますから、過去のデータから未来を推測することになります。
 過去は失敗のデータの宝庫です。それに基づいて計算すれば、当然、マイナスの未来像が出てきます。
 マイナス思考に陥ってくよくよ悩み、ストレスばかりためる結果になるのです。女性のほうがずっと
-長生きするのも、④「ストレスとのつきあい方」がうまいから でしょう。
-59．①「人間の大脳は、ご存じのように右脳と左脳に分かれています」とあるが、「左脳」
+長生きするのも、④「ストレスとのつきあい方」がうまいから でしょう。<br>
+59．①「人間の大脳は、ご存じのように右脳と左脳に分かれています」とあるが、「左脳」<br>
 と「右脳」の役割分担についてあっているのはどれか。
 １ 左脳: 数学問題を解く、小論文を書く、スピーチをする。
 右脳: 絵を描く、料理を作る、ピアノを弾く。
  ２ 左脳: 哲学の本を書く、英語を話す、服のデザインをする。
  右脳: 歌を歌う、ヨガの練習をする、映画を作る。
  ３ 左脳: 商品の値段を計算する、法廷で弁護する、フランス語を勉強する。
- 右脳: 彫刻
-ちょうこく
-を作る、コンサートで演奏する、十年後の様子を想像する。
+ 右脳: 彫刻ちょうこくを作る、コンサートで演奏する、十年後の様子を想像する。
  ４ 左脳: 企画書を書く、パソコンを修理する、部屋の装飾を変える。
  右脳: おしゃべりする、本を読む、プログラムを計画する。
 
-160
- 
 60．②「数学は男子のほうが得意で、音楽は女子に得意な子が多かった」とあるが、それ
 はなぜか。
 １ 男性は左脳が発達しているのに対して、女性は右脳のほうが強いから。
@@ -311,12 +270,10 @@
 ２ 女性は未来にある可能性を想像できるから、楽観になりすぎるきらいがある。
 ３ 男性は人生にマイナスのイメージを持っているから、ストレスがたまりやすい。
 ４ 男性は過去の失敗のデータにより、マイナス思考に陥りやすく、ストレスが
- たまりやすい。
- 
-161
- 
+ たまりやすい。<br>
+
 問題 11 次の A と B はそれぞれ別の新聞社の記事である。A と B の両方を読んで、後の問
-いに対する答えとして最もよいものを、1・2・3・4 から一つ選びなさい。 
+いに対する答えとして最もよいものを、1・2・3・4 から一つ選びなさい。 <br>
 A 
 トヨタ自動車のリコール問題は、一自動車メーカーに対する不信を超え、自動車産業
 全体へ広がろうとしている。 
@@ -324,9 +281,7 @@ A
 しい。リコールの対象になったアクセルペダルやハイブリッド車のブレーキは、設計品
 質と製造品質の両面から、早急に原因究明と改善が進むとみられる。一方、問題がここ
 まで深刻化した背景に、自動車メーカーを甘やかす雰囲気が社内外になかったのか、検
-証してみる必要がある。
-一つはマスメディアの 豹変
-ひょうへん
+証してみる必要がある。一つはマスメディアの 豹変ひょうへん
 ぶりだ。一昨年までは、トヨタが世界一の自動車中メー
 カーになるとほめ立ててきた。ところが、品質問題が発覚すると、急速な成長が品質悪
 化の遠因になったと指摘。これでは新興国市場の急拡大に必死で対応しようとしている
@@ -338,16 +293,12 @@ B
 両工場で 4 月までに計 14 日間の稼働休止を実施。販売がさらに減少すれば、国内生産
 にも影響が及ぶことが予想されている。こうした警戒感から、開発にあたる「技術職｣
 の採用は 380 人で、直近のピークの 05 年度の半分以下に絞られた。 
-しかし、人件費抑制
-よくせい
-の政策が逆にトヨタの競争力を引っ張りかねないという懸念もつ
+しかし、人件費抑制よくせいの政策が逆にトヨタの競争力を引っ張りかねないという懸念もつ
 きまとう。技術職の採用抑制では、ハイブリッド車など次世代環境車の開発競争に遅れ
 が出ないとも限らない。
 黒字転換を目指して採用抑制を進める中、競争力確保とのバランスをどう取るかが課題
 になっている。
- 
-162
- 
+<br> 
 63．A と B のどちらの記事にも触れられている内容はどれか。
 １ トヨタ自動車がアメリカでリコールした車種。
 ２ マスメディアのリコール問題に関する報道。
@@ -363,12 +314,9 @@ B
 ２ 新しい車種の開発において、業界の先頭に立つため「技術職」の採用を増やす。
 ３ 消費者を安心させるため、マスメディアを通して謝罪し新しくスタートする。
 ４ リコール問題の原因究明と改善を進めると同時に、人件費を抑制する。
- 
- 
-163
- 
+<br>
 問題 12 次の文章を読んで、後の問いに対する答えとして最もよいものを、1・2・3・4
-から一つ選びなさい。 
+から一つ選びなさい。 <br>
 現代に生きる私たちは、やはり異文化とどう向き合うのか、という心の姿勢をそれなり
 に 培つちかっておくことは、どのような環境で生活するにしても、ある程度重要なことと思わ
 れる。どこかの人里ひとざと離れた田舎でひっそりと暮らそう、と思っていても、その田舎のあり
@@ -395,33 +343,32 @@ B
 ぎ合う糸なのであり、ある固定された知識を持っているだけとか、外国語を話すことがで
 きるということだけでは、（ ③ ）。それは「関わりの停止」ですらある。
 異文化社会の中に身をおいていてもいなくても、意欲を持ち続けていることが基本的に
-重要な姿勢だと思われる。
+重要な姿勢だと思われる。<br>
 （注）三猿さんざるを決め込む：見ざる、聞かざる、言わざるの「三ざる」
-66．①「三猿を決め込んでいるだけであるとも言える」とあるが、誰のことを言って い
-るか。
+66．①「三猿を決め込んでいるだけであるとも言える」とあるが、誰のことを言って いるか。
 １ 現代に生きていて、異文化交流に積極的に向き合う人のこと
 ２ 現代に生きているが、人里を離れてひっそり隠遁いんとん生活をしようとする人のこと
 ３ 世の中の現実に背を向けて、虚無な生活をしている人のこと
-４ 外国語の習得を通して、異文化に向き合おうとしている人のこと
-67．②「一本調子いっぽんぢょうしの発想」の内容と合わないのはどれか。
+４ 外国語の習得を通して、異文化に向き合おうとしている人のこと<br>
+67．②「一本調子いっぽんぢょうしの発想」の内容と合わないのはどれか。<br>
 １ 外国語さえできれば、異文化理解も順調に行くだろうという考え
 ２ 異文化と向き合うことは、外国語を習得することだと決めこむ考え
 ３ 現地の言葉を不自由なくこなせれば、その社会や文化への理解もきっと深く なるという考え
-４ 外国の言葉を身につけていても、異文化の壁を感じることがあるという考え
-68. （ ③ ）に入れるのに正しいものはどれか。
+４ 外国の言葉を身につけていても、異文化の壁を感じることがあるという考え<br>
+68. （ ③ ）に入れるのに正しいものはどれか。<br>
 １ 異文化とかかわっていないことになる
 ２ 異文化とかかわっていないともいえない
 ３ 異文化とかかわっていることにはならない
-４ 異文化とかかわらなくてもいいことになる
+４ 異文化とかかわらなくてもいいことになる<br>
  
-69. この文章で筆者が一番言いたいことはどれか。
+69. この文章で筆者が一番言いたいことはどれか。<br>
 １ 現代に生きるわたしたちにとって異文化理解は大切なことだ。
-２ 異文化理解には、最終的な解釈はない。大切なのは理解しようとする、また
- 理解されようとする意欲を持ち続けることだ。
+２ 異文化理解には、最終的な解釈はない。大切なのは理解しようとする、
+また 理解されようとする意欲を持ち続けることだ。
 ３ 外国語が話せるからといって、異文化理解に詳しいとは限らない。
 ４ 現地で過ごした経験のない人は、異文化の壁にぶつかりやすい。
 問題 13 次は、ある会社の募集要項である。後の質問として最もよいものを、1・2・3・
-4 から一つ選びなさい。 
+4 から一つ選びなさい。 <br>
 70．日本国出身で営業関係の仕事を 5 年間ぐらいやってきた佐藤さんは、営業部長や副総
 経理として日系会社の上海支社に勤めた経験はあるが、財務関係のことには詳しくない。
 英語と北京語がビジネスレベルで、広東語があまりできない。彼の場合、応募できる職は
@@ -438,7 +385,7 @@ B
 ４ 40K～50K
 
 求人広告（香港・中国華南地区） 
-
+</div>
     </pre>
     <p>
         <a  class="setting--a" href="index.html">home</a>
